--- a/data/feats/ancestry-05-ZOOP2RzRJnpVqnCr.htm
+++ b/data/feats/ancestry-05-ZOOP2RzRJnpVqnCr.htm
@@ -6,9 +6,9 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You can ask questions of, receive answers from, and use the Diplomacy skill with animals with the amphibious or aquatic traits.
-Avantage: Vous pouvez poser des questions, recevoir des réponses et utiliser la compétence Diplomatie avec les animaux ayant les traits amphibie ou aquatique.
+Avantage: Vous pouvez parler aux animaux amphibies ou aquatiques.
 
 ------ Description (en) ------
 <p>You can ask questions of, receive answers from, and use the Diplomacy skill with animals with the amphibious or aquatic traits. You gain a +1 circumstance bonus to Make an Impression on such animals.</p>
 ------ Description (fr) ------
-<p>Vous pouvez poser des questions à, recevoir des réponses et utiliser la compétence en Diplomatie avec des animaux avec les traits amphibies ou aquatiques. Vous obtenez un bonus de circonstances de +1 pour Faire bonne impression sur de tels animaux.</p>
+<p>Vous pouvez poser des questions, recevoir des réponses et utiliser la compétence Diplomatie avec des animaux possédant les traits amphibies ou aquatiques. Vous obtenez un bonus de circonstances de +1 pour Faire bonne impression sur de tels animaux.</p>
