--- a/data/feats/ancestry-05-ZRI1OXaaa4ZC6EK1.htm
+++ b/data/feats/ancestry-05-ZRI1OXaaa4ZC6EK1.htm
@@ -2,12 +2,11 @@ Name: Easily Dismissed
 Nom: Facilement négligé
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You are practiced at blending into the background of the streets and halls of larger folk to ensure that you are overlooked.
-Avantage: Vous avez l'habitude de vous fondre dans le décor des rues et des salles des grands personnages pour vous assurer que l'on ne vous remarque pas.
+Avantage: Vous pouvez vous fondre dans la foule pour passer inaperçu.
 
 ------ Description (en) ------
 <p><strong>Access</strong> Chelaxian nationality<br /></p>
@@ -16,5 +15,5 @@ Avantage: Vous avez l'habitude de vous fondre dans le décor des rues et des sal
 ------ Description (fr) ------
 <p><strong>Accès</strong> nationalité Chélaxienne</p>
 <hr />
-<p>Vous avez suffisamment de pratique pour vous fondre dans l'arrière-plan des rues et des salons de gens plus importants que vous pour parvenir à faire en sorte d'être considéré comme quantité négligeable.</p>
+<p>Vous avez suffisamment de pratique pour vous fondre dans l'arrière-plan des rues et des salons de gens plus importants que vous pour faire en sorte d'être considéré comme quantité négligeable.</p>
 <p>Lorsque vous vous trouvez dans une foule ou dans une zone urbaine assez empruntée, vous pouvez essayer de vous @Compendium[pf2e.actionspf2e.XMcnh4cSI32tljXa]{Cacher} ou d'@Compendium[pf2e.actionspf2e.VMozDqMMuK5kpoX4]{Être Furtif}, même lorsque vous êtes Observé. En cas de succès, vous n'êtes ni Caché ni Non-détecté, mais les autres créatures ne font simplement pas attention à vous, même si elles peuvent vous voir. Vous ne pouvez utiliser cette capacité face à des observateurs qui vous ont déjà vu accomplir des actions importunes ou notables. Si vous accomplissez une action autre que vous Cacher ou être Furtif ou que vous entreprenez une autre action notable (à l'appréciation du MJ), les observateurs vous remarquent alors.</p>
