--- a/data/feats/ancestry-05-zgriBCYR4TmBoDqO.htm
+++ b/data/feats/ancestry-05-zgriBCYR4TmBoDqO.htm
@@ -6,7 +6,7 @@ PrereqFR: Expert en Discrétion
 
 ------ Benefits and spoiler ----
 Benefits: You are skilled at quickly hiding behind bits of underbrush or foliage.
-Avantage: Vous êtes doué pour vous cacher rapidement derrière des broussailles ou du feuillage.
+Avantage: Vous pouvez rapidement disparaître dans les environnements forestiers.
 
 ------ Description (en) ------
 <p><strong>Requirements</strong> You are in a forest or jungle environment near an environmental feature that would allow you to Take Cover.</p>
