--- a/data/feats/ancestry-05-zwqawaXccARDV0jL.htm
+++ b/data/feats/ancestry-05-zwqawaXccARDV0jL.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: To blend in with the grounded and wingless, you fold your wings just so on your back, creating the illusion of a feathered cloak.
-Avantage: Pour vous fondre dans la masse et sans ailes, vous repliez vos ailes sur votre dos, créant ainsi l'illusion d'un manteau de plumes.
+Avantage: Vous pouvez plus facilement vous fondre parmi les humanoïdes terrestres.
 
 ------ Description (en) ------
 <p>To blend in with the grounded and wingless, you fold your wings just so on your back, creating the illusion of a feathered cloak. You receive a +2 circumstance bonus to Deception checks to Impersonate a version of yourself who is not a strix. Additionally, your folded wings help you obscure objects on your person, providing a +2 circumstance bonus to Stealth checks to Conceal an Object.</p>
