--- a/data/feats/ancestry-09-1WheVs50iwMBi6KC.htm
+++ b/data/feats/ancestry-09-1WheVs50iwMBi6KC.htm
@@ -6,10 +6,10 @@ PrereqFR: Porteur de loi
 
 ------ Benefits and spoiler ----
 Benefits: You can tap into the heavenly magic that is your birthright.
-Avantage: Vous pouvez puiser dans la magie céleste qui est votre droit de naissance.
+Avantage: Vous pouvez Lancer Flamme éternelle et Protection d'autrui une fois par jour chacun.
 
 ------ Description (en) ------
 <p>You can tap into the heavenly magic that is your birthright. You can cast @Compendium[pf2e.spells-srd.ynm8JIU3sc3qUMpa]{Continual Flame} and @Compendium[pf2e.spells-srd.d7Lwx6KAs47MtF0q]{Shield Other} each once per day as 2nd-level divine innate spells.</p>
 ------ Description (fr) ------
-<p>Vous pouvez puiser dans la magie du Paradis qui est votre droit de naissance.</p>
+<p>Vous pouvez puiser dans la magie du Paradis du fait de votre naissance.</p>
 <p>Vous pouvez Lancer @Compendium[pf2e.spells-srd.ynm8JIU3sc3qUMpa]{Flamme éternelle} et @Compendium[pf2e.spells-srd.d7Lwx6KAs47MtF0q]{Protection d'autrui} une fois par jour chacun comme des sorts divins innés de niveau 2.</p>
