--- a/data/feats/ancestry-09-2GrlSP1xhKIz4G8B.htm
+++ b/data/feats/ancestry-09-2GrlSP1xhKIz4G8B.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You are descended from the einherji, the worthy warriors of chaos.
-Avantage: Vous descendez des Einherji, les dignes guerriers du chaos.
+Avantage: Une fois par jour, vous regagnez des Points de vie égaux à la moitié de votre niveau lorsque vous réussissez votre Frappe.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
@@ -15,4 +15,4 @@ Avantage: Vous descendez des Einherji, les dignes guerriers du chaos.
 ------ Description (fr) ------
 <p><strong>Fréquence</strong> une fois par jour</p>
 <hr />
-<p>Vous descendez des einherji, les combattants valeureux du chaos. Vous faites appel au sang de vos ascendants avec un puissant cri qui vous remplit d'une énergie revitalisante pendant 1 minute ou jusqu'à ce que vous fassiez un échec critique à une Frappe, selon ce qui se produit en premier. Pendant cette durée, la première fois au cours de chaque round que vous obtenez un succès lors d'une Frappe contre une créature de votre niveau ou plus élevé, vous regagnez des Points de vie égaux à la moitié de votre niveau.</p>
+<p>Vous descendez des einherji, les combattants valeureux du chaos. Vous faites appel au sang de vos ascendants en lançant un puissant cri qui vous remplit d'une énergie revitalisante pendant 1 minute ou jusqu'à ce que vous subissiez un échec critique à une Frappe, selon ce qui se produit en premier. Pendant cette durée, la première fois au cours de chaque round que vous obtenez un succès lors d'une Frappe contre une créature de votre niveau ou plus élevé, vous regagnez des Points de vie égaux à la moitié de votre niveau.</p>
