--- a/data/feats/ancestry-09-2kAyZ3LB28BDhXKa.htm
+++ b/data/feats/ancestry-09-2kAyZ3LB28BDhXKa.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You wield primal magic.
-Avantage: Tu manies la magie primitive.
+Avantage: Vous pouvez lancer Peau d'écorce et Enchevêtrement au niveau 2 une fois par jour chacun.
 
 ------ Description (en) ------
 <p>You wield primal magic. You can cast @Compendium[pf2e.spells-srd.YWrfKetOqDwVFut7]{Barkskin} and @Compendium[pf2e.spells-srd.J6vNvrUT3b1hx2iA]{Entangle} as 2nd-level primal innate spells once per day each.</p>
