--- a/data/feats/ancestry-05-ZOJsLNziWQ7Ri3x9.htm
+++ b/data/feats/ancestry-05-ZOJsLNziWQ7Ri3x9.htm
@@ -6,10 +6,10 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your knowledge of your own not-quite-living anatomy, combined with your experience in combat, helps you take down undead foes with ease.
-Avantage: Votre connaissance de votre propre anatomie de non-vivant, combinée à votre expérience du combat, vous permet de vaincre facilement vos ennemis morts-vivants.
+Avantage: Vous obtenez un bonus au dégâts des Frappes d'arme quand vous combattez des morts vivants. 
 
 ------ Description (en) ------
 <p>Your knowledge of your own not-quite-living anatomy, combined with your experience in combat, helps you take down undead foes with ease. Against undead creatures, you gain a circumstance bonus to damage with weapons and unarmed attacks equal to the number of weapon damage dice for the @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Strike}. This bonus increases to double the number of weapon damage dice if your target has the vampire trait.</p>
 ------ Description (fr) ------
-<p>Votre connaissance de votre propre anatomie pas tout à fait vivante, combinée avec votre expérience au combat, vous aide à abattre les adversaires morts-vivants avec facilité.</p>
+<p>Votre connaissance de votre propre anatomie pas tout à fait vivante combinée à votre expérience du combat vous aide à abattre les adversaires morts-vivants avec facilité.</p>
 <p>Contre les créatures mortes-vivantes, vous obtenez un bonus de circonstance aux dégâts avec les attaques avec des armes et à mains nues égal au nombre de dés de dégâts de l'arme pour la @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Frappe}. Ce bonus est du double des dés de dégâts de l'arme si votre cible possède le trait vampire.</p>
