--- a/data/feats/ancestry-05-ya9YlhUA4WspUlHB.htm
+++ b/data/feats/ancestry-05-ya9YlhUA4WspUlHB.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your clan dagger can protect your allies as easily as yourself.
-Avantage: La dague de votre clan peut protéger vos alliés aussi bien que vous-même.
+Avantage: Votre dague de clan peut protéger vos alliés adjacents aussi bien que vous-même.
 
 ------ Description (en) ------
 <p>Your @Compendium[pf2e.equipment-srd.kJJvKm80KwWXPukV]{Clan Dagger}can protect your allies as easily as yourself. When you use an @Compendium[pf2e.actionspf2e.pvQ5rY2zrtPI614F]{Interact} action to gain a circumstance bonus to AC from your clan dagger's parry trait, you can grant the circumstance bonus to an adjacent ally instead of gaining it yourself. You can use multiple Interact actions to protect multiple allies, or to protect yourself and an ally. The ally benefits from the bonus to AC only when they are adjacent to you.</p>
