--- a/data/feats/ancestry-05-z0Bwy7lxU3DIugpo.htm
+++ b/data/feats/ancestry-05-z0Bwy7lxU3DIugpo.htm
@@ -6,9 +6,9 @@ PrereqFR: capacité à communiquer avec certains types d'animaux (tels que des c
 
 ------ Benefits and spoiler ----
 Benefits: You can speak to all animals , not just a particular subset.
-Avantage: Vous pouvez vous adresser à tous les animaux, pas seulement à un sous-ensemble particulier.
+Avantage: Vous pouvez vous adresser à tous les animaux.
 
 ------ Description (en) ------
 <p>You can speak to all animals, not just a particular subset. You gain a +1 circumstance bonus to Make an Impression on animals (which usually uses the Diplomacy skill).</p>
 ------ Description (fr) ------
-<p>Vous pouvez parler à tous les animaux, pas juste une particulière sous espèce. Vous obtenez un bonus de circonstances de +1 pour Faire bonne impression sur les animaux (ce qui utilise habituellement la compétence Diplomatie).</p>
+<p>Vous pouvez parler à tous les animaux, et pas juste à une particulière sous-espèce. Vous obtenez un bonus de circonstances de +1 pour Faire bonne impression sur les animaux (ce qui utilise habituellement la compétence Diplomatie).</p>
