--- a/data/feats/ancestry-05-z2z3UTayfUhcGazv.htm
+++ b/data/feats/ancestry-05-z2z3UTayfUhcGazv.htm
@@ -1,15 +1,15 @@
 Name: Scar-Thick Skin
-Nom: Peau balafre épaisse
+Nom: Peau épaisse balafrée
 PrereqEN: 
 PrereqFR: 
 État: libre
 
 ------ Benefits and spoiler ----
 Benefits: Glorious, storied scars cover and protect much of your body.
-Avantage: Des cicatrices glorieuses et légendaires couvrent et protègent une grande partie de votre corps.
+Avantage: Vous arrêtez plus facilement des dégâts de saignement.
 
 ------ Description (en) ------
 <p>Glorious, storied scars cover and protect much of your body. Your DC on flat checks to end persistent bleed damage is reduced from 15 to 10, or from 10 to 5 after receiving especially appropriate assistance.</p>
 ------ Description (fr) ------
-<p>Les balafres glorieuses et chargées d'histoires couvrent et protègent la plupart de votre corps.</p>
+<p>Les balafres glorieuses et chargées d'histoires couvrent et protègent une grande partie de votre corps.</p>
 <p>Votre DD sur les tests nus pour mettre un terme aux dégâts de saignement persistant est réduit de 15 à 10 ou de 10 à 5 après avoir reçu une assistante particulièrement appropriée.</p>
