--- a/data/feats/ancestry-05-zc32MIxa1E6357D6.htm
+++ b/data/feats/ancestry-05-zc32MIxa1E6357D6.htm
@@ -6,9 +6,10 @@ PrereqFR: Familiarité avec les armes elfiques
 
 ------ Benefits and spoiler ----
 Benefits: You are attuned to the weapons of your elven ancestors and are particularly deadly when using them.
-Avantage: Vous êtes en harmonie avec les armes de vos ancêtres elfes et vous êtes particulièrement mortel lorsque vous les utilisez.
+Avantage: En cas de coup critique avec une arme elfe, vous appliquez l'effet critique spécialisé.
 
 ------ Description (en) ------
 <p>You are attuned to the weapons of your elven ancestors and are particularly deadly when using them. Whenever you critically hit using an elf weapon or one of the weapons listed in Elven Weapon Familiarity, you apply the weapon's critical specialization effect.</p>
 ------ Description (fr) ------
-<p>Vous êtes harmonisé avec les armes de vos ancêtres et les maniez avec une efficacité redoutable. À chaque fois que vous réussissez un coup critique avec une arme elfique ou une des armes citées dans la description du don Familiarité avec les armes elfiques, vous appliquez l’effet critique spécialisé de cette arme.</p>
+<p>Vous êtes harmonisé avec les armes de vos ancêtres et les maniez avec une efficacité redoutable.</p>
+<p>À chaque fois que vous réussissez un coup critique avec une arme elfique ou une des armes citées dans la description du don Familiarité avec les armes elfiques, vous appliquez l’effet critique spécialisé de cette arme.</p>
