--- a/data/feats/ancestry-09-2i82PgD1BEtAVeZt.htm
+++ b/data/feats/ancestry-09-2i82PgD1BEtAVeZt.htm
@@ -6,9 +6,9 @@ PrereqFR: Touché par la muse
 
 ------ Benefits and spoiler ----
 Benefits: The wild wonder of Elysium harmonizes within you, and in dire straits, you can share its benefits with your allies.
-Avantage: La merveille sauvage d'Elysium s'harmonise en vous, et dans les moments difficiles, vous pouvez partager ses bienfaits avec vos alliés.
+Avantage: Votre vitesse s'accroit de 1,5 m et profite à vos alliés adjacents.
 
 ------ Description (en) ------
 <p>The wild wonder of Elysium harmonizes within you, and in dire straits, you can share its benefits with your allies. Your Speed increases by 5 feet; the Speed increase from this feat isn’t cumulative with any Speed increase from your ancestry feats (such as Nimble Elf). Allies who begin their turn in combat adjacent to you gain a +5-foot status bonus to their Speed for the round.</p>
 ------ Description (fr) ------
-<p>Les merveilles sauvages de l'Élysée s'harmonise en vous et dans les situations désepérées, vous pouvez partager ses bénéfices avec vos alliés. Votre vitesse s'accroît de 1,5 m ; l'accroisseme,nt de la Vitesse de ce don n'est pas cumulable avec d'autre accroissement de vos dons d'ascendance (comme Elfe preste). Les alliés qui commencent leur tour en combat en étant adjacent à vous obtiennent un bonus de statut de +1,5 m à leur vitesse pendant le round.</p>
+<p>Les merveilles sauvages de l'Élysée s'harmonisent en vous et, dans les situations désepérées, vous pouvez partager leur bénéfice avec vos alliés. Votre vitesse s'accroît de 1,5 m ; L'accroissement de la Vitesse de ce don n'est pas cumulable avec un autre accroissement résultant de vos dons ancestraux (comme Elfe preste). Les alliés qui commencent leur tour en combat en étant adjacent à vous obtiennent un bonus de statut de +1,5 m à leur vitesse pendant le round.</p>
