--- a/data/feats/ancestry-09-4Ai8aNHYw7oEj7eE.htm
+++ b/data/feats/ancestry-09-4Ai8aNHYw7oEj7eE.htm
@@ -6,9 +6,9 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Nodules, hooks, or claws on your limbs allow you to cling to surfaces with ease.
-Avantage: Des nodules, des crochets ou des griffes sur vos membres vous permettent de vous accrocher facilement aux surfaces.
+Avantage: Vous obtenez une vitesse d'escalade de 4,5 m.
 
 ------ Description (en) ------
 <p>Nodules, hooks, or claws on your limbs allow you to cling to surfaces with ease. You gain a climb Speed of 15 feet.</p>
 ------ Description (fr) ------
-<p>Les nodules, les crochets ou les griffes sur vos membres vous permettent de vous accrocher aux surfaces avec facilité. Vous obtenez une vitesse d'escalade de 4,5 m.</p>
+<p>Des nodules, des crochets ou des griffes sur vos membres vous permettent de vous accrocher aux surfaces avec facilité. Vous obtenez une vitesse d'escalade de 4,5 m.</p>
