--- a/data/feats/ancestry-09-3N6T7AQETVKaAwiR.htm
+++ b/data/feats/ancestry-09-3N6T7AQETVKaAwiR.htm
@@ -6,7 +6,7 @@ PrereqFR: Né de la fosse
 
 ------ Benefits and spoiler ----
 Benefits: You can channel the power of the Abyss through your heritage, producing terrible tangible effects.
-Avantage: Vous pouvez canaliser le pouvoir des Abysses à travers votre héritage, produisant de terribles effets tangibles.
+Avantage: Vous pouvez Lancer Paranoïa et Fracassement au niveau 2 une fois par jour chacun.
 
 ------ Description (en) ------
 <p>You can channel the power of the Abyss through your heritage, producing terrible tangible effects. You can cast @Compendium[pf2e.spells-srd.Mkbq9xlAUxHUHyR2]{Paranoia} and @Compendium[pf2e.spells-srd.1xbFBQDRs0hT5xZ9]{Shatter} each once per day as 2nd-level divine innate spells.</p>
