--- a/data/feats/ancestry-09-3Y1k2eAMqCdcCGmK.htm
+++ b/data/feats/ancestry-09-3Y1k2eAMqCdcCGmK.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your intractable nature can help you shrug off even the most grievous injuries.
-Avantage: Votre nature intraitable peut vous aider à vous débarrasser des blessures les plus graves.
+Avantage: Sur un test nu DD17, un coup critique devient un coup normal.
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> You are struck by a critical hit that deals physical damage.</p>
