--- a/data/feats/ancestry-09-4EgueMqUm0ebKV4J.htm
+++ b/data/feats/ancestry-09-4EgueMqUm0ebKV4J.htm
@@ -1,12 +1,12 @@
 Name: Dragonblood Paragon
 Nom: Parangon sangdragon
 PrereqEN: strongjaw kobold heritage, venomtail kobold heritage, Dracomancer, or Kobold Breath
-PrereqFR: héritage kobolds à forte mâchoire, héritage kobold à queue venimeuse, Dracomancien ou Souffle de kobold
+PrereqFR: héritage kobold à forte mâchoire, héritage kobold à queue venimeuse, Dracomancien ou Souffle de kobold
 État: libre
 
 ------ Benefits and spoiler ----
 Benefits: Your draconic anatomy becomes especially pronounced.
-Avantage: Votre anatomie draconique devient particulièrement prononcée.
+Avantage: Vos dons ancestraux kobolds sont plus puissants.
 
 ------ Description (en) ------
 <p>Your draconic anatomy becomes especially pronounced. You increase the power of one of the following kobold heritages or feats you have.</p>
@@ -16,9 +16,9 @@ Avantage: Votre anatomie draconique devient particulièrement prononcée.
 <p><strong>Strongjaw Kobold</strong> Your jaws unarmed attack gains the deadly d6 trait.</p>
 <p><strong>Venomtail Kobold</strong> You produce enough venom to use the Tail Toxin action twice per day.</p>
 ------ Description (fr) ------
-<p>Votre anatomie draconique devient particulièrement prononcé. Vous augmentez le pouvoir d'une des héritages kobold ou des dons que vous possédez.</p>
+<p>Votre anatomie draconique devient particulièrement prononcée. Vous augmentez le pouvoir d'une des héritages kobold ou des dons que vous possédez.</p>
 <hr />
-<p><strong>Dracomancien</strong> Augmentez de 1 le nombre de fois que vous pouvez lancer chacune des sorts innés de niveau 1 et 2.</p>
-<p><strong>Souffle kobold</strong> Les créatures que obtiennent un échec critique à leur jet de sauvegarde contre votreSouffle kobold subit 3d4 dégâts persistants du type infligé par votre patron draconique.</p>
+<p><strong>Dracomancien</strong> Augmentez de 1 le nombre de fois que vous pouvez lancer chacun des sorts innés de niveau 1 et 2.</p>
 <p><strong>Kobold à forte mâchoire</strong> Vos attaques de mâchoire à mains nues obtiennent le trait mortel d6.</p>
 <p><strong>Kobold à queue venimeuse</strong> Vous produisez assez de venin pour utiliser l'action Queue à toxine deux fois par jour.</p>
+<p><strong>Souffle kobold</strong> Les créatures que obtiennent un échec critique à leur jet de sauvegarde contre votre Souffle kobold subissent 3d4 dégâts persistants du type infligé par votre modèle draconique.</p>
