--- a/data/feats/ancestry-09-4Jwtl2FvxskruHQv.htm
+++ b/data/feats/ancestry-09-4Jwtl2FvxskruHQv.htm
@@ -6,7 +6,7 @@ PrereqFR: Vierge de saumure, Vierge de  neige, Vierge voilée ou Vierge virga
 
 ------ Benefits and spoiler ----
 Benefits: You summon an aura of shimmering heat, flurrying snow, crashing waves, or swirling wind and lightning.
-Avantage: Vous invoquez une aura de chaleur chatoyante, de neige volante, de vagues déferlantes, ou de vent tourbillonnant et d'éclairs.
+Avantage: Vous générez un tourbillon d'énergie qui vous masque et inflige des dégâts aux créatures adjacentes.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
@@ -15,4 +15,6 @@ Avantage: Vous invoquez une aura de chaleur chatoyante, de neige volante, de vag
 ------ Description (fr) ------
 <p><strong>Fréquence</strong> une fois par jour</p>
 <hr />
-<p>Vous invoquez une aura de chaleur châtoyante, de bourrasque neigeuse, de vagues écrasantes ou de vent tourbillonant et d'éclairs. Pendant 1 minute, vous devenez @Compendium[pf2e.conditionitems.DmAIPqOBomZ7H95W]{Masqué} contre les créatures qui sont à plus de 1,5 m de vous et toute créature qui termine son tour dans les 1,5 m de vous subit [[/r 1d12]] dégâts (jet de réflexe en utilisant le plus élevé entre votre DD de classe ou votre DD de sort). Aux niveaux 13 et 17, ces dégâts passent à à 1d12. Un changelin vierge voilée peut infliger des dégâts de feu, un changelin vierge de neige inflige des dégâts de froid, un changelin vierge de saumure inflige des dégâts contondants et l'effet obtient le trait eau et un changelin vierge virga inflige des dégâts d'électricité.</p>
+<p>Vous invoquez une aura de chaleur châtoyante, de bourrasque neigeuse, de vagues écrasantes ou de vent tourbillonant et d'éclairs.</p>
+<p>Pendant 1 minute, vous devenez @Compendium[pf2e.conditionitems.DmAIPqOBomZ7H95W]{Masqué} contre les créatures qui sont à plus de 1,5 m de vous et toute créature qui termine son tour dans les 1,5 m de vous subit [[/r 1d12]] dégâts (jet de Réflexes en utilisant le plus élevé entre votre DD de classe ou votre DD de sort). Aux niveaux 13 et 17, ces dégâts augmentent de 1d12.</p>
+<p>Un changelin vierge voilée peut infliger des dégâts de feu, un changelin vierge de neige inflige des dégâts de froid, un changelin vierge de saumure inflige des dégâts contondants et l'effet obtient le trait eau et un changelin vierge virga inflige des dégâts d'électricité.</p>
