--- a/data/feats/ancestry-09-4cH2RoWsgXYaWIPa.htm
+++ b/data/feats/ancestry-09-4cH2RoWsgXYaWIPa.htm
@@ -6,9 +6,9 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your limbs and even your torso can collapse in on themselves, allowing you to fit through tight spaces as though you were a Small creature.
-Avantage: Vos membres et même votre torse peuvent se replier sur eux-mêmes, ce qui vous permet de vous glisser dans des espaces étroits comme si vous étiez une petite créature.
+Avantage: Vous pouvez vous Faufiler comme si vous étiez de taille Petite.
 
 ------ Description (en) ------
 <p>Your limbs and even your torso can collapse in on themselves, allowing you to fit through tight spaces as though you were a Small creature. You can move at full Speed while Squeezing.</p>
 ------ Description (fr) ------
-<p>Vos membres et même votre torse peut s'effondrer sur eux-mêmes, vous permettant de passer par de petits espaces  comme si vous étiez une créature de taille Petite. Vous pouvez vous déplacer à votre pleine Vitesse alors que vous vous Faufilez.</p>
+<p>Vos membres et même votre torse peuvent se replier sur eux-mêmes, vous permettant de passer par de petits espaces comme si vous étiez une créature de taille Petite. Vous pouvez vous déplacer à votre pleine Vitesse alors que vous vous Faufilez.</p>
