--- a/data/feats/ancestry-09-4hFeaF4MlqIHb6gb.htm
+++ b/data/feats/ancestry-09-4hFeaF4MlqIHb6gb.htm
@@ -6,10 +6,10 @@ PrereqFR: Touché par la muse
 
 ------ Benefits and spoiler ----
 Benefits: Your lineage traces back to the realm of Elysium, and you can harness its magic using this connection.
-Avantage: Votre lignée remonte au royaume d'Elysium, et vous pouvez exploiter sa magie en utilisant cette connexion.
+Avantage: Vous pouvez Lancer Poussière scintillante et Délivrance de la paralysie une fois par jour chacun au niveau 2.
 
 ------ Description (en) ------
 <p>Your lineage traces back to the realm of Elysium, and you can harness its magic using this connection. You can cast @Compendium[pf2e.spells-srd.0qaqksrGGDj74HXE]{Glitterdust} and @Compendium[pf2e.spells-srd.BCuHKrDeJ4eq53M6]{Remove Paral<em>ysis}</em> each once per day as 2nd-level divine innate spells.</p>
 ------ Description (fr) ------
 <p>Votre lignage remonte jusqu'au royaume de l'Élysee et vous pouvez exploiter sa magie en utilisant ce lien.</p>
-<p>Vous pouvez Lancer @Compendium[pf2e.spells-srd.0qaqksrGGDj74HXE]{Poussière scintillante} et @Compendium[pf2e.spells-srd.BCuHKrDeJ4eq53M6]{Délivrance de la paralysie} une fois par jour chacun comme des sorts divins innés de niveau 2.</p>
+<p>Vous pouvez Lancer @Compendium[pf2e.spells-srd.0qaqksrGGDj74HXE]{Poussière scintillante} et @Compendium[pf2e.spells-srd.BCuHKrDeJ4eq53M6]{Délivrance de la paralysie} une fois par jour chacun comme des sorts divins innés au niveau 2.</p>
