--- a/data/feats/ancestry-09-6WwxTbX8KvU3Xxak.htm
+++ b/data/feats/ancestry-09-6WwxTbX8KvU3Xxak.htm
@@ -2,15 +2,14 @@ Name: Janni Hospitality
 Nom: Hospitalité jann
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You can use magic to show others desert hospitality.
-Avantage: Vous pouvez utiliser la magie pour montrer aux autres l'hospitalité du désert.
+Avantage: Vous pouvez lancer Création de nourriture une fois par jour et Création d'eau deux fois par jour au niveau 2.
 
 ------ Description (en) ------
 <p>You can use magic to show others desert hospitality. You can cast 2nd-level @Compendium[pf2e.spells-srd.Mt6ZzkVX8Q4xigFq]{Create Food} once per day and @Compendium[pf2e.spells-srd.WzLKjSw6hsBhuklC]{Create Water} twice per day as arcane innate spells.</p>
 ------ Description (fr) ------
 <p>Vous pouvez utiliser la magie pour montrer aux autres l'hospitalité du désert.</p>
-<p>Vous pouvez lancer @Compendium[pf2e.spells-srd.Mt6ZzkVX8Q4xigFq]{Création de nourriture} au niveau 2 une fois par jour et @Compendium[pf2e.spells-srd.WzLKjSw6hsBhuklC]{Création d'eau} deux fois par jour comme des sorts arcaniques innés.</p>
+<p>Vous pouvez lancer @Compendium[pf2e.spells-srd.Mt6ZzkVX8Q4xigFq]{Création de nourriture} une fois par jour et @Compendium[pf2e.spells-srd.WzLKjSw6hsBhuklC]{Création d'eau} deux fois par jour comme des sorts arcaniques innés au niveau 2.</p>
