--- a/data/feats/ancestry-09-6eXffyvqxpIzig2O.htm
+++ b/data/feats/ancestry-09-6eXffyvqxpIzig2O.htm
@@ -6,7 +6,7 @@ PrereqFR: Poussée nanite
 
 ------ Benefits and spoiler ----
 Benefits: Nanites augment your attacks.
-Avantage: Les nanites augmentent vos attaques.
+Avantage: Poussée nanite vous octroie un bonus de statut de +1 à un jet d'attaque.
 
 ------ Description (en) ------
 <p>Nanites augment your attacks. You can choose to activate Nanite Surge when you attempt an attack roll, instead of when you attempt a skill check. If you do, you gain a +1 status bonus to the triggering attack roll.</p>
