--- a/data/pathfinder-bestiary-2/tCJEjNDUxyV1GzE3.htm
+++ b/data/pathfinder-bestiary-2/tCJEjNDUxyV1GzE3.htm
@@ -1,8 +1,8 @@
 Name: Hamatula
-Nom: 
-État: auto-trad
+Nom: Hamatula
+État: libre
 
 ------ Description (en) ------
 Hamatulas are forged in Erebus to protect infernal vaults from those foolish enough to try to rob the archdevil Mammon. In case the vicious spines protruding from their bodies and ability to teleport weren't deadly enough, they are also clever wielders of warding glyphs. They are effective conjured guardians, though they resent being pulled away from their duties in Hell. Unlike most fiends, hamatulas are formed from several souls that lack any features distinctive enough to merit another role.<br /><br />
 ------ Description (fr) ------
-Les Hamatulas sont forgés à Erebus pour protéger les coffres infernaux de ceux qui sont assez fous pour essayer de voler l'archidémon Mammon. Au cas où les épines vicieuses qui dépassent de leur corps et leur capacité à se téléporter ne seraient pas assez mortelles, ils manient également avec habileté les glyphes de protection. Ils sont des gardiens conjurés efficaces, bien qu'ils n'apprécient pas d'être éloignés de leurs fonctions en enfer. Contrairement à la plupart des monstres, les hamatulas sont formés de plusieurs âmes qui n'ont pas de caractéristiques suffisamment distinctives pour mériter un autre rôle ;
+Les Hamatulas sont forgés à Erebus pour protéger les coffres infernaux de ceux qui sont assez fous pour essayer de voler l'archidémon Mammon. Au cas où les épines vicieuses qui dépassent de leur corps et leur capacité à se téléporter ne seraient pas assez mortelles, ils manient également avec habileté les glyphes de protection. Ce sont des gardiens invoqués efficaces, bien qu'ils n'apprécient pas d'être éloignés de leurs fonctions en enfer. Contrairement à la plupart des monstres, les Hamatulas sont formés de plusieurs âmes qui n'ont pas de caractéristiques suffisamment distinctives pour mériter un autre rôle.
