--- a/data/pathfinder-bestiary-2/tdCyjq57rgfPezjT.htm
+++ b/data/pathfinder-bestiary-2/tdCyjq57rgfPezjT.htm
@@ -1,8 +1,8 @@
 Name: Carbuncle
-Nom: 
-État: auto-trad
+Nom: Escarboucle
+État: libre
 
 ------ Description (en) ------
 Never have legend and misinformation met upon a more inauspicious brow than that of the lowly carbuncle. At first glance, carbuncles appear to be little more than ungainly reptiles. What sets them apart is their strange magical abilities and the gemstone-like horn protruding from between their goggling eyes. Although rumors suggest various uses for carbuncle horns, ranging from miracle cure-alls to potent magical components, the truth is much more mundane: a carbuncle's horn is merely a highly reflective growth, not unlike a fingernail.<br /><br />
 ------ Description (fr) ------
-Jamais légende et désinformation ne se sont rencontrées sur un front aussi peu propice que celui du modeste furoncle. À première vue, les escarboucles ne sont guère plus que des reptiles disgracieux. Ce qui les distingue, ce sont leurs étranges capacités magiques et la corne en forme de pierre précieuse qui dépasse d'entre leurs yeux globuleux. Bien que les rumeurs suggèrent divers usages pour les cornes des escarboucles, allant de remèdes miracles à de puissants composants magiques, la vérité est beaucoup plus banale : la corne d'un escarboucle n'est qu'une excroissance hautement réfléchissante, un peu comme un ongle.<br /><br />
+Jamais légende et désinformation ne se sont rencontrées sur un front aussi malencontreux que celui de l'humble Escarboucle. Le nom de la créature reste vague et confus. A première vue les Escarboucles semblent être un peu plus que des reptiles disgracieux. Ce qui les distingue, ce sont leurs étranges capacités magiques et la corne en forme de pierre précieuse qui dépasse d'entre leurs yeux globuleux. Bien que les rumeurs suggèrent divers usages pour les cornes des Escarboucles, allant de remèdes miracles à de puissants composants magiques, la vérité est beaucoup plus banale : la corne d'un Escarboucle n'est qu'une excroissance hautement réfléchissante, un peu comme un ongle.<br /><br />
