--- a/data/pathfinder-bestiary-2/U2hAALepVC90CNhQ.htm
+++ b/data/pathfinder-bestiary-2/U2hAALepVC90CNhQ.htm
@@ -1,8 +1,8 @@
 Name: Rusalka
-Nom: 
-État: auto-trad
+Nom: Roussalka
+État: libre
 
 ------ Description (en) ------
 These androgynous, river-dwelling fey delight in manipulating the emotions of those unfortunate enough to fall into their grasp, using humiliation to break their victims' wills. Rusalkas enjoy keeping their broken toys nearby, both for continuing entertainment and to aid in the rusalkas' defense, as the shame their captives feel often drives them to become obsessively loyal to these fey.<br /><br />
 ------ Description (fr) ------
-Ces feys androgynes, qui vivent dans les rivières, adorent manipuler les émotions de ceux qui ont le malheur de tomber sous leur emprise, utilisant l’humiliation pour briser la volonté de leurs victimes. Les Rusalkas aiment garder leurs jouets cassés à proximité, à la fois pour continuer à se divertir et pour aider à la défense des Rusalkas, car la honte que ressentent leurs captifs les pousse souvent à devenir obsessionnellement loyaux envers ces feys.<br /><br />
+Ces fées androgynes, qui vivent dans les rivières, adorent manipuler les émotions de ceux qui ont le malheur de tomber sous leur emprise, utilisant l’humiliation pour briser la volonté de leurs victimes. Les Roussalkas aiment garder leurs jouets cassés à proximité, à la fois pour continuer à se divertir et pour aider à leur défense, car la honte que ressentent leurs captifs les pousse souvent à devenir obsessionnellement loyaux envers ces feys.<br /><br />
