--- a/data/feats/ancestry-09-8znlUoKgr8mmLPe1.htm
+++ b/data/feats/ancestry-09-8znlUoKgr8mmLPe1.htm
@@ -6,9 +6,9 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: With a sharp flap of your wings, you stay light on your feet as you move.
-Avantage: D'un battement d'ailes vif, vous restez léger sur vos pieds en vous déplaçant.
+Avantage: Vous Faites un pas deux fois.
 
 ------ Description (en) ------
 <p>With a sharp flap of your wings, you stay light on your feet as you move. You Step twice.</p>
 ------ Description (fr) ------
-<p>Avec un rapide battement d'ailes, vous êtes léger sur vos pieds lorsque vous vous déplacez. Vous faites un pas deux fois.</p>
+<p>D'un vif battement d'ailes, vous restez léger sur vos pieds lorsque vous vous déplacez. Vous Faites un pas deux fois.</p>
