--- a/data/feats/ancestry-09-7RFu7EwwvjHMP0dq.htm
+++ b/data/feats/ancestry-09-7RFu7EwwvjHMP0dq.htm
@@ -2,14 +2,14 @@ Name: Rakshasa Magic
 Nom: Magie rakshasa
 PrereqEN: Beastbrood
 PrereqFR: Bête éduquée
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You remember the secrets of your rakshasa forebears and know how to apply those memories to get results.
-Avantage: Vous vous souvenez des secrets de vos ancêtres rakshasa et savez comment appliquer ces souvenirs pour obtenir des résultats.
+Avantage: Vous pouvez lancer Forme humanoïde et Créature illusoire une fois par jour chacun.
 
 ------ Description (en) ------
 <p>You remember the secrets of your rakshasa forebears and know how to apply those memories to get results. You can cast @Compendium[pf2e.spells-srd.2qGqa33E4GPUCbMV]{Humanoid Form} and @Compendium[pf2e.spells-srd.f8SBoXiXQjlCKqly]{Illusory Creature} once per day each as 2nd-level divine innate spells.</p>
 ------ Description (fr) ------
-<p>Vous vous souvenez des secrets de vos ancêtres Rakshasa et savent comment appliquer ces mémoires pour obtenir des résultats. Vous pouvez lancer @Compendium[pf2e.spells-srd.2qGqa33E4GPUCbMV]{Forme humanoïde} et @Compendium[pf2e.spells-srd.f8SBoXiXQjlCKqly]{Créature illusoire} une fois par jour comme des sorts divins innés de niveau 2.</p>
+<p>Vous vous souvenez des secrets de vos ancêtres Rakshasa et savez comment appliquer leurs mémoires pour obtenir des résultats.</p>
+<p>Vous pouvez lancer @Compendium[pf2e.spells-srd.2qGqa33E4GPUCbMV]{Forme humanoïde} et @Compendium[pf2e.spells-srd.f8SBoXiXQjlCKqly]{Créature illusoire} une fois par jour chacun comme des sorts divins innés de niveau 2.</p>
