--- a/data/feats/ancestry-09-7cM7uKRKQDWz5eeu.htm
+++ b/data/feats/ancestry-09-7cM7uKRKQDWz5eeu.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: The songs of ancient heroes echo through your mind and quicken your pulse, especially in dire straits.
-Avantage: Les chants des anciens héros résonnent dans votre esprit et accélèrent votre pouls, surtout dans les moments difficiles.
+Avantage: Vous obtenez la faculté de lancer le sort Héroïsme une fois par jour au niveau 3 et obtenez parfois des points de vie temporaires.
 
 ------ Description (en) ------
 <p>The songs of ancient heroes echo through your mind and quicken your pulse, especially in dire straits. You gain @Compendium[pf2e.spells-srd.KqvqNAfGIE5a9wSv]{Heroism}as a 3rd-level innate occult spell that you can cast once per day. If you Cast the Spell when you have half or fewer Hit Points, you also gain temporary Hit Points equal to twice your level.</p>
