--- a/data/feats/ancestry-09-7vUOlVqjheZV0Nmc.htm
+++ b/data/feats/ancestry-09-7vUOlVqjheZV0Nmc.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your connection to the First World has grown, and its positive energy flows into you rapidly.
-Avantage: Votre connexion avec le Premier Monde s'est développée, et son énergie positive circule rapidement en vous.
+Avantage: Après 10 minutes de repos, vous regagnez des points de vie.
 
 ------ Description (en) ------
 <p>Your connection to the First World has grown, and its positive energy flows into you rapidly. If you rest for 10 minutes, you gain Hit Points equal to your Constitution modifier × half your level. This is cumulative with any healing you receive from Treat Wounds.</p>
