--- a/data/feats/ancestry-09-8buK32r3i3aGyyOR.htm
+++ b/data/feats/ancestry-09-8buK32r3i3aGyyOR.htm
@@ -2,14 +2,14 @@ Name: Shaitan Magic
 Nom: Magie Shaitan
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: The magic of shaitans runs through your blood.
-Avantage: La magie des shaitans coule dans ton sang.
+Avantage: Vous pouvez lancer Poussière scintillante et Résistance à l'énergie une fois par jour chacun
 
 ------ Description (en) ------
 <p>The magic of shaitans runs through your blood. You can cast @Compendium[pf2e.spells-srd.0qaqksrGGDj74HXE]{Glitterdust} and @Compendium[pf2e.spells-srd.Fr58LDSrbndgld9n]{Resist Energy} once per day each as 2nd-level arcane innate spells.</p>
 ------ Description (fr) ------
-<p>La magie des Shaitans court dans vos veines. Vous pouvez lancer @Compendium[pf2e.spells-srd.0qaqksrGGDj74HXE]{Poussière scintillante} et @Compendium[pf2e.spells-srd.Fr58LDSrbndgld9n]{Résistance à l'énergie} une fois par jour comme des sorts arcaniques innés de niveau 2.</p>
+<p>La magie des Shaitans court dans vos veines.</p>
+<p>Vous pouvez lancer @Compendium[pf2e.spells-srd.0qaqksrGGDj74HXE]{Poussière scintillante} et @Compendium[pf2e.spells-srd.Fr58LDSrbndgld9n]{Résistance à l'énergie} une fois par jour chacun comme des sorts arcaniques innés de niveau 2.</p>
