--- a/data/feats/ancestry-09-8ukixWL8MBJOhPbW.htm
+++ b/data/feats/ancestry-09-8ukixWL8MBJOhPbW.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: One of your parents has a human life span and another an elven life span, with your own somewhere between.
-Avantage: L'un de vos parents a une durée de vie humaine et un autre une durée de vie elfique, la vôtre se situant entre les deux.
+Avantage: Vous pouvez lancer Rapidité sur vous-même une fois par jour.
 
 ------ Description (en) ------
 <p>One of your parents has a human life span and another an elven life span, with your own somewhere between. As a result, you have an unusual perspective on time, which you've learned to manifest to aid yourself in moments of stress.</p>
