--- a/data/feats/ancestry-09-9LTBRvuQgXKZFiZc.htm
+++ b/data/feats/ancestry-09-9LTBRvuQgXKZFiZc.htm
@@ -6,9 +6,10 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You have mastered how to hunt with your pack.
-Avantage: Tu as maîtrisé la façon de chasser avec ta meute.
+Avantage: Un ennemi à portée de vos alliés et vous-même est Pris au dépourvu.
 
 ------ Description (en) ------
 <p>You have mastered how to hunt with your pack. If an enemy is within reach of you and at least two of your allies, that enemy is flat-footed against you.</p>
 ------ Description (fr) ------
-<p>Vous avez maîtrisé comment chasser avec votremeute. Si un ennemi est à portée de vous et d'au moins deux de vos alliés, cet ennemi est Pris au dépourvu contre vous.</p>
+<p>Vous avez maîtrisé la chasser avec votre meute.</p>
+<p>Si un ennemi est à portée de vous et d'au moins deux de vos alliés, cet ennemi est Pris au dépourvu contre vous.</p>
