--- a/data/feats/ancestry-05-twnZopGlB392hmqH.htm
+++ b/data/feats/ancestry-05-twnZopGlB392hmqH.htm
@@ -1,5 +1,5 @@
 Name: Project Persona
-Nom: Incarner votre personnage
+Nom: Accoutrement imaginaire
 PrereqEN: 
 PrereqFR: 
 État: libre
@@ -13,6 +13,6 @@ Avantage: Vpous pouvez faire passer votre armure pour de simples vêtements.
 <p>You change the shape and appearance of your armor to appear as ordinary or fine clothes of your imagining. The armor's statistics don't change. This effect lasts as long as you remain conscious and are wearing the armor.</p>
 <p>A creature can disbelieve the illusion by Seeking or touching your armor. The DC equals your Will DC.</p>
 ------ Description (fr) ------
-<p>Alors que d'autres gravent leurs armures pour servir d'exutoire à leur imagination, votre esprit vif et votre personnalité audacieuse vous permettent de projeter une image plus adaptée sur une armure manquant de lustre.</p>
+<p>Alors que d'autres gravent leurs armures pour servir d'exutoire à leur imagination, votre esprit vif et votre personnalité audacieuse vous permettent de projeter votre personnalité sur une armure manquant de lustre.</p>
 <p>Vous changez la forme et l'apparence de votre armure pour qu'elle apparaisse comme étant des habits ordinaires ou comme de beaux atours issus de votre imagination. Les statistiques de l'armure ne changent pas. Cet effet dure tant que vous restez conscient et que vous portez l'armure.</p>
 <p>Une créature peut déjouer l'illusion en Cherchant ou en touchant votre armure. Le DD est égal à votre DD de Volonté.</p>
