--- a/data/feats/ancestry-09-AKMx0GYKLjy7jTXl.htm
+++ b/data/feats/ancestry-09-AKMx0GYKLjy7jTXl.htm
@@ -1,14 +1,15 @@
 Name: No Evidence
-Nom: Pas de preive
+Nom: Pas de preuve
 PrereqEN: expert in Survival
 PrereqFR: expert en Survie
 État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You leave little sign when attempting to remain unseen.
-Avantage: Vous laissez peu de signes quand vous essayez de rester invisible.
+Avantage: Vous dissimulez vos traces en Échappant au regard.
 
 ------ Description (en) ------
 <p>You leave little sign when attempting to remain unseen. When you Avoid Notice, you also gain the benefits of Cover Tracks unless you choose not to.</p>
 ------ Description (fr) ------
-<p>Vous laissez peu de signes lorsque vous tentez de passer inaperçu. Lorsque vous Échappez au regard, vous obtenez aussi l'avantage de Dissimuler des traces à moins que vous choisissiez de ne pas le faire.</p>
+<p>Vous laissez peu de signes lorsque vous tentez de passer inaperçu.</p>
+<p>Lorsque vous Échappez au regard, vous obtenez aussi l'avantage de Dissimuler des traces à moins que vous choisissiez de ne pas le faire.</p>
