--- a/data/feats/ancestry-09-ATiQDz27aiBTAt17.htm
+++ b/data/feats/ancestry-09-ATiQDz27aiBTAt17.htm
@@ -2,12 +2,11 @@ Name: Roll with It
 Nom: Roule avec çà
 PrereqEN: unbreakable goblin heritage|Bouncy Goblin
 PrereqFR: gobelin incassable|Gobelin rebondissant
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: When you take a big hit, your foe bounces you around like a rubber ball, but you escape the worst of the blow.
-Avantage: Lorsque vous prenez un gros coup, votre adversaire vous fait rebondir comme une balle en caoutchouc, mais vous échappez au plus fort du choc.
+Avantage: Vous évitez les pires dégâts en acceptant que l'adversaire vous déplace jusqu'à 9 m et en acceptant de vous retrouver en mauvaise posture.
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> A foe hits you with a melee weapon or unarmed attack.</p>
@@ -16,5 +15,5 @@ Avantage: Lorsque vous prenez un gros coup, votre adversaire vous fait rebondir 
 ------ Description (fr) ------
 <p><strong>Déclencheur</strong> Un ennemi vous touche avec une arme de corps à corps ou une attaque à mains nues.</p>
 <hr />
-<p>Vous recevez un grand coup, votre ennemi vous propulse comme une boule de gomme, mais vous échappez au pire effet du coup.</p>
-<p>Votre ennemi peut vous déplacer à toute distance de son choix jusqu'à 9 m (ce n'est pas un déplacement forcé et cela déclenche les réactions comme habituellement). Vous vous retrouvez @Compendium[pf2e.conditionitems.j91X7x0XSomq8d60]{À terre} et êtes @Compendium[pf2e.conditionitems.dfCMdR4wnpbYNTix]{Étourdi} 1. Faites un test nu contre un DD 6. Sur une réussite, vous subissez les dégâts minimum de l'attaque et sur un succèss critique, si l'attaque était un coup critique, vous ne subissez pas les dégâts doublés du coup critique.</p>
+<p>Lorsque vous recevez un grand coup, votre ennemi vous propulse comme une boule de gomme, mais vous échappez au pire effet du coup.</p>
+<p>Votre ennemi peut vous déplacer à toute distance de son choix jusqu'à 9 m (ce n'est pas un déplacement forcé et cela déclenche les réactions comme à l'ordinaire). Vous vous retrouvez @Compendium[pf2e.conditionitems.j91X7x0XSomq8d60]{À terre} et êtes @Compendium[pf2e.conditionitems.dfCMdR4wnpbYNTix]{Étourdi} 1. Faites un test nu contre un DD 6. Sur une réussite, vous subissez les dégâts minimum de l'attaque et sur un succèss critique, si l'attaque était un coup critique, vous ne subissez pas les dégâts doublés du coup critique.</p>
