--- a/data/feats/ancestry-09-B5HiNholWMwYdHTC.htm
+++ b/data/feats/ancestry-09-B5HiNholWMwYdHTC.htm
@@ -6,7 +6,7 @@ PrereqFR: héritage Nain coeurélémentaire
 
 ------ Benefits and spoiler ----
 Benefits: Energy runs through your blood more powerfully.
-Avantage: L'énergie circule dans votre sang de manière plus puissante.
+Avantage: Lorsque vous utilisez Émanation élémentaire, vous pouvez créer une émanation de 1,5 m, de 3 m ou de 4,5 m et pouvez infliger plus de dégâts.
 
 ------ Description (en) ------
 <p>Energy runs through your blood more powerfully. When you use @Compendium[pf2e.actionspf2e.7qjfYsLNTr17Aftf]{Energy Emanation}, you can create an emanation of 5 feet, 10 feet, or 15 feet. The damage increases to 6d6 plus an additional 1d6 for every level you have above 9th, instead of 1d6 plus an additional 1d6 for every 2 levels above 1st.</p>
