--- a/data/feats/ancestry-09-aOIZvx5fx5jVHHOO.htm
+++ b/data/feats/ancestry-09-aOIZvx5fx5jVHHOO.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You phase through a space that a living creature occupies in a flash, spontaneously appearing on the opposite side of it in a vibrant display of colorful light.
-Avantage: Vous traversez un espace qu'une créature vivante occupe en un clin d'œil, apparaissant spontanément de l'autre côté dans un vibrant déploiement de lumière colorée.
+Avantage: Vous traversez une autre créature pour a^^araître de l'autre côté.
 
 ------ Description (en) ------
 <p><strong>Requirements</strong> You must be adjacent to a living creature.</p>
