--- a/data/feats/ancestry-09-aznyI5mfMdEFSDr8.htm
+++ b/data/feats/ancestry-09-aznyI5mfMdEFSDr8.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: There's no journey too far or burden too heavy when your friends are at your side.
-Avantage: Il n’y a pas de voyage trop loin ou de fardeau trop lourd lorsque vos amis sont à vos côtés.
+Avantage: Vous voyagez plus vite avec plus de charge lorsque des amis vous accompagnent.
 
 ------ Description (en) ------
 <p>There's no journey too far or burden too heavy when your friends are at your side.</p>
