--- a/data/feats/ancestry-09-AGznaQpn2cE6jz9H.htm
+++ b/data/feats/ancestry-09-AGznaQpn2cE6jz9H.htm
@@ -1,14 +1,14 @@
 Name: Dangle
-Nom: Pendre
+Nom: Suspendre
 PrereqEN: Flexible Tail
 PrereqFR: Queue souple
 État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You can hang by your tail from any suitable anchor point, such as a tree branch, balcony, or rocky outcropping (subject to the GM's discretion), typically while climbing.
-Avantage: Vous pouvez vous suspendre par la queue à n'importe quel point d'ancrage approprié, comme une branche d'arbre, un balcon ou un affleurement rocheux (à la discrétion du MJ), généralement en grimpant.
+Avantage: Votre queue peut attraper une prise pour vous suspendre et vous permettre de libérer vos deux mains pour faire autre chose.
 
 ------ Description (en) ------
 <p>You can hang by your tail from any suitable anchor point, such as a tree branch, balcony, or rocky outcropping (subject to the GM’s discretion), typically while climbing. While hanging, you have free use of all your other limbs, so you can perform tasks that require both hands, such as firing a bow or swinging a greatsword.</p>
 ------ Description (fr) ------
-<p>Vous pouvez vous suspendre par votre queue de n'importe quel point d'ancrage, tel qu'une branche d'arbre, d'un balcon ou d'une saillie rocheuse (sujet à la discrétion du MJ), typiquement au cours de l'escalade. En vous suspendant, vous avez le libre usage de tous vos autrs membres, de sorte que vous pouvez accomplir des tâches qui requièrent les deux mains, tels que tirer à l'arc ou balancer une épée à deux mains.</p>
+<p>Vous pouvez vous suspendre par la queue à partir de n'importe quel point d'ancrage, tels qu'une branche d'arbre, un balcon ou une saillie rocheuse (à la discrétion du MJ), typiquement au cours de l'escalade. En vous suspendant, vous avez le libre usage de tous vos autres membres, de sorte que vous pouvez accomplir des tâches qui requièrent les deux mains, telles que tirer à l'arc ou balancer un coup avec une épée à deux mains.</p>
