--- a/data/feats/ancestry-09-AJVx3sHm6f6i8ZQW.htm
+++ b/data/feats/ancestry-09-AJVx3sHm6f6i8ZQW.htm
@@ -1,15 +1,15 @@
 Name: Efreeti Magic
-Nom: Magie Efrit
+Nom: Magie éfrit
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: The magic of your efreeti ancestors flows through you.
-Avantage: La magie de vos ancêtres efreeti coule à travers vous.
+Avantage: Vous pouvez lancer Agrandissement et Objet illusoire une fois par jour chacun
 
 ------ Description (en) ------
 <p>The magic of your efreeti ancestors flows through you. You can cast @Compendium[pf2e.spells-srd.wzctak6BxOW8xvFV]{Enlarge} and @Compendium[pf2e.spells-srd.2oH5IufzdESuYxat]{Illusory Object} once per day each as 2nd-level arcane innate spells.</p>
 ------ Description (fr) ------
-<p>La magie de vos ancêtres Efrit coule à travers vous. Vous pouvez lancer @Compendium[pf2e.spells-srd.wzctak6BxOW8xvFV]{Agrandissement} et @Compendium[pf2e.spells-srd.2oH5IufzdESuYxat]{Objet illusoire} une fois par jour chacun comme des sorts innés arcaniques de niveau 2.</p>
+<p>La magie de vos ancêtres éfrits coule en vous.</p>
+<p>Vous pouvez lancer @Compendium[pf2e.spells-srd.wzctak6BxOW8xvFV]{Agrandissement} et @Compendium[pf2e.spells-srd.2oH5IufzdESuYxat]{Objet illusoire} une fois par jour chacun comme des sorts innés arcaniques de niveau 2.</p>
