--- a/data/feats/ancestry-09-a32r2n9j36khV0Cp.htm
+++ b/data/feats/ancestry-09-a32r2n9j36khV0Cp.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You unleash a cloud of pollen or similar spores.
-Avantage: Vous libérez un nuage de pollen ou de spores similaires.
+Avantage: Vous libérez un nuage qui affecte la vue de ceux qui vous entourent.
 
 ------ Description (en) ------
 <p>Frequency once per hour</p>
@@ -18,11 +18,11 @@ Avantage: Vous libérez un nuage de pollen ou de spores similaires.
 <p><strong>Failure</strong> The creature is dazzled and can see only 10 feet away for 1 round.</p>
 <p><strong>Critical Failure</strong> The creature is @Compendium[pf2e.conditionitems.XgEqL1kFApUbl5Z2]{Blinded} for 1 round.</p>
 ------ Description (fr) ------
-<p><strong>Frequency</strong> une fois par heure</p>
+<p><strong>Fréquence</strong> une fois par heure</p>
 <hr />
-<p>Vous relâchez une nuage de pollen ou de spores similaires. Toutes les créatures dans une émanation de 3 m autour de vous doit tenter un jet de Vigueur et en utilisant votre DD de classe ou un DD de sort (le plus élevé) avec les résultats suivants. Les plantes et les champignons sont immunisés à cet effet.</p>
+<p>Vous relâchez une nuage de pollen ou de spores similaires. Toutes les créatures dans une émanation de 3 m autour de vous doivent tenter un jet de Vigueur en utilisant le plus élevé entre votre DD de classe et votre DD de sort avec les résultats suivants. Les plantes et les champignons sont immunisés à cet effet.</p>
 <hr />
 <p><strong>Succès critique</strong> Pas d'effet.</p>
 <p><strong>Succès</strong> La créature est @Compendium[pf2e.conditionitems.TkIyaNPgTZFBCCuh]{Éblouie} pendant 1 round.</p>
-<p><strong>Échec</strong> La créature est Éblouie et peut voir seulement à 3 m au loin pendant 1 round.</p>
+<p><strong>Échec</strong> La créature est Éblouie et peut voir seulement à 3 m de distance pendant 1 round.</p>
 <p><strong>Échec critique</strong> La créature est @Compendium[pf2e.conditionitems.XgEqL1kFApUbl5Z2]{Aveuglée} pendant 1 round.</p>
