--- a/data/feats/ancestry-09-aIm2qi4JZerthZmF.htm
+++ b/data/feats/ancestry-09-aIm2qi4JZerthZmF.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You move in a graceful dance, and even your steps are broad.
-Avantage: Vous vous déplacez dans une danse gracieuse, et même vos pas sont larges.
+Avantage: Vous Faites un pas de 1,50 m deux fois.
 
 ------ Description (en) ------
 <p>You move in a graceful dance, and even your steps are broad. You Step 5 feet twice.</p>
