--- a/data/feats/ancestry-09-bo4JG09pkoS7ywSZ.htm
+++ b/data/feats/ancestry-09-bo4JG09pkoS7ywSZ.htm
@@ -6,9 +6,10 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: After years of crawling and climbing through caverns, you can climb easily anywhere you go.
-Avantage: Après des années à ramper et à grimper dans les cavernes, vous pouvez grimper facilement partout où vous allez.
+Avantage: Vous gagnez une Vitesse d’escalade de 3 m.
 
 ------ Description (en) ------
 <p>After years of crawling and climbing through caverns, you can climb easily anywhere you go. You gain a climb Speed of 10 feet.</p>
 ------ Description (fr) ------
-<p>Après avoir passé des années à ramper et grimper dans les cavernes, vous n’avez aucun mal à escalader les obstacles qui se dressent sur votre chemin. Vous gagnez une Vitesse d’escalade de 3 m.</p>
+<p>Après avoir passé des années à ramper et grimper dans les cavernes, vous n’avez aucun mal à escalader les obstacles qui se dressent sur votre chemin.</p>
+<p>Vous gagnez une Vitesse d’escalade de 3 m.</p>
