--- a/data/feats/ancestry-09-BaVO8UU5ZkL8OZZj.htm
+++ b/data/feats/ancestry-09-BaVO8UU5ZkL8OZZj.htm
@@ -6,10 +6,10 @@ PrereqFR: Souffle de kobold
 
 ------ Benefits and spoiler ----
 Benefits: You can put more effort into your Kobold Breath to channel greater draconic power, though it takes more out of you.
-Avantage: Tu peux faire plus d'efforts dans ton Souffle de Kobold pour canaliser une plus grande puissance draconique, bien que cela te demande plus d'efforts.
+Avantage: Votre souffle draconique peut faire plus de dégâts à une plus grande portée mais ne peut plus être utilisé pendant une heure.
 
 ------ Description (en) ------
 <p>You can put more effort into your Kobold Breath to channel greater draconic power, though it takes more out of you. When you use Kobold Breath, you can increase the damage dice to d8s and increase the area to 60 feet for a line breath weapon or 30 feet for a cone. If you do, you can't use Kobold Breath again for 1 hour.</p>
 ------ Description (fr) ------
-<p>Vous pouvez placer davantage d'efforts dans votre Souffle de kobold pour canaliser plus de pouvoir draconique, bien que cela exige davantage de vous.</p>
-<p>Lorsque vous utilisez Souffle de kobold, vous pouvez faire passer le dé de dégâts à des d8 et vous pouvez augmenter la portée à 18 m pour un souffle en ligne ou à 9 m pour un cône. Lorsque vous choisissez de le faire, vous ne pouvez plus utiliser Souffle du kobold pendant 1 heure.</p>
+<p>Vous pouvez placer davantage d'énergie dans votre Souffle de kobold pour canaliser plus de pouvoir draconique mais cela vous demande davantage d'efforts.</p>
+<p>Lorsque vous utilisez Souffle de kobold, vous pouvez faire passer le dé de dégâts à des d8 et vous pouvez augmenter la portée à 18 m si votre souffle est une ligne ou à 9 m si votre souffle est un cône. Lorsque vous choisissez de le faire, vous ne pouvez plus utiliser Souffle du kobold pendant 1 heure.</p>
