--- a/data/feats/ancestry-09-ByqxxJkJiNFtjghh.htm
+++ b/data/feats/ancestry-09-ByqxxJkJiNFtjghh.htm
@@ -1,12 +1,12 @@
 Name: Mask Of Pain
 Nom: Masque de douleur
 PrereqEN: expert in Intimidation|Orc Warmask
-PrereqFR: expert en Intimidation|Masque de guerre orque
+PrereqFR: expert en Intimidation|Masque de guerre orc
 État: libre
 
 ------ Benefits and spoiler ----
 Benefits: Your mask has grown into a manifestation of your pain, which you can release.
-Avantage: Votre masque est devenu une manifestation de votre douleur, que vous pouvez libérer.
+Avantage: La créature que vous réussissez à Démoraliser avec votre masque subit des dégâts mentaux.
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> You succeed at a Demoralize check.</p>
@@ -16,4 +16,5 @@ Avantage: Votre masque est devenu une manifestation de votre douleur, que vous p
 <p><strong>Déclencheur</strong> Vous réussissez un test pour Démoraliser.</p>
 <p><strong>Condition</strong> Vous portez votre <em>masque de guerre</em>.</p>
 <hr />
-<p>Votre masque a évolué en une manifestation de votre douleur, que vous pouvez relâcher. La créature que vous réussissez à démoraliser subit [[/r 2d6 #mentaux]] dégâts mentaux ou [[/r 4d6 #mentaux]] dégâts mentaux si vous êtes légendaire en Intimidation. La cible est alors temporairement immunisée aux dégâts supplémentaires de Masque de douleur pendant 24 heures.</p>
+<p>Votre masque a évolué en une manifestation de votre douleur, que vous pouvez déchainer.</p>
+<p>La créature que vous réussissez à démoraliser subit [[/r 2d6 #mentaux]] dégâts mentaux ou [[/r 4d6 #mentaux]] dégâts mentaux si vous êtes légendaire en Intimidation. La cible est alors temporairement immunisée aux dégâts supplémentaires de Masque de douleur pendant 24 heures.</p>
