--- a/data/feats/ancestry-09-COP89tjrNhEucuRW.htm
+++ b/data/feats/ancestry-09-COP89tjrNhEucuRW.htm
@@ -2,8 +2,7 @@ Name: Mountain's Stoutness
 Nom: Robustesse de la montagne
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: Your hardiness lets you withstand more punishment than most before going down.
@@ -14,4 +13,5 @@ Avantage: Votre robustesse vous permet d'encaisser plus de coups que la plupart 
 <p>If you also have the @Compendium[pf2e.feats-srd.AmP0qu7c5dlBSath]{Toughness} feat, the Hit Points gained from it and this feat are cumulative, and the DC of your recovery checks is equal to 6 + your dying value.</p>
 ------ Description (fr) ------
 <p>Votre robustesse vous permet d’endurer plus de dégâts avant de vous avouer vaincu.</p>
-<p>Ajoutez votre niveau à votre maximum de points de vie. Vous diminuez le DD de vos tests de récupération lorque vous êtes mourant de 1. Si vous possédez aussi le don Robustesse, les points de vie gagnés grâce au don et à ce pouvoir sont cumulatifs et le DD de vos tests de récupération est de 6 + l’intensité de votre état mourant.</p>
+<p>Ajoutez votre niveau à votre maximum de points de vie. Lorsque vous avez l'état Mourant, le DD de vos tests de récupération est de 9 + l'intensité de votre état Mourant (au lieu de 10 + l'intensité de l'état Mourant).</p>
+<p>Si vous possédez aussi le don @Compendium[pf2e.feats-srd.AmP0qu7c5dlBSath]{Robustesse}, les points de vie gagnés grâce au don et à ce pouvoir sont cumulatifs et le DD de vos tests de récupération est de 6 + l’intensité de votre état mourant.</p>
