--- a/data/feats/ancestry-09-Eoy0zhpf8tYrTHN4.htm
+++ b/data/feats/ancestry-09-Eoy0zhpf8tYrTHN4.htm
@@ -2,12 +2,11 @@ Name: Shory Aeromancer
 Nom: Aéromancien Rivain
 PrereqEN: Garundi, Mauxi, or Tian-Uae ethnicity
 PrereqFR: ethnie Garundaise, Mauxi ou Tian-Yae
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: Your ancestors hailed from the flying cities of the Shory, and a few simple tricks have come down through the ages to you.
-Avantage: Vos ancêtres venaient des cités volantes de la Shory, et quelques astuces simples vous ont été transmises à travers les âges.
+Avantage: Vous pouvez lancer le sort Vol une fois par jour.
 
 ------ Description (en) ------
 <p>Your ancestors hailed from the flying cities of the Shory, and a few simple tricks have come down through the ages to you. You can cast 4th-level @Compendium[pf2e.spells-srd.A2JfEKe6BZcTG1S8]{Fly} on yourself as an innate arcane spell once per day.</p>
