--- a/data/feats/ancestry-09-cRMUYCnkkE9lSEhh.htm
+++ b/data/feats/ancestry-09-cRMUYCnkkE9lSEhh.htm
@@ -1,10 +1,12 @@
 Name: Irrepressible (Halfling)
 Nom: Irrépressible (Halfelin)
 PrereqEN: 
-Avantage:
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
+
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: Les effets d'émotion vous affectent moins.
 
 ------ Description (en) ------
 <p>You are easily able to ward off attempts to play on your fears and emotions. When you roll a success on a saving throw against an emotion effect, you get a critical success instead. If your heritage is gutsy halfling, when you roll a critical failure on a saving throw against an emotion effect, you get a failure instead.</p>
