--- a/data/feats/ancestry-09-cmhfYMEM4uzrNIiV.htm
+++ b/data/feats/ancestry-09-cmhfYMEM4uzrNIiV.htm
@@ -6,7 +6,7 @@ PrereqFR: Ailes évanescentes
 
 ------ Benefits and spoiler ----
 Benefits: You stoke your magic to energize your wings, temporarily transforming them into glowing, majestic forms.
-Avantage: Tu alimentes ta magie pour donner de l'énergie à tes ailes, les transformant temporairement en formes majestueuses et lumineuses.
+Avantage: Pendant 1 minute, vous obtenez une vitesse de Vol de 9 mètres.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per hour</p>
