--- a/data/feats/ancestry-09-dtmLxbSy2H8h8e4N.htm
+++ b/data/feats/ancestry-09-dtmLxbSy2H8h8e4N.htm
@@ -6,9 +6,10 @@ PrereqFR: Précipitation gobeline
 
 ------ Benefits and spoiler ----
 Benefits: You can scuttle farther and faster when maneuvering alongside allies.
-Avantage: Vous pouvez vous faufiler plus loin et plus vite lorsque vous manœuvrez aux côtés de vos alliés.
+Avantage: Précipitation gobeline vous permet désormais de Marcher rapidement.
 
 ------ Description (en) ------
 <p>You can scuttle farther and faster when maneuvering alongside allies. When you use Goblin Scuttle, you can Stride up to half your Speed instead of Stepping.</p>
 ------ Description (fr) ------
-<p>Quand vous vous trouvez aux côtés de vos alliés, vous pouvez vous précipiter plus loin et plus vite. Quand vous utilisez Précipitation gobeline, vous pouvez Marcher rapidement jusqu’à la moitié de votre Vitesse au lieu de Faire un pas.</p>
+<p>Quand vous vous trouvez aux côtés de vos alliés, vous pouvez vous précipiter plus loin et plus vite.</p>
+<p>Quand vous utilisez Précipitation gobeline, vous pouvez Marcher rapidement jusqu’à la moitié de votre Vitesse au lieu de Faire un pas.</p>
