--- a/data/feats/ancestry-09-DnfVQGLk3PAl8UWh.htm
+++ b/data/feats/ancestry-09-DnfVQGLk3PAl8UWh.htm
@@ -6,10 +6,10 @@ PrereqFR: Aiguiseur de crocs
 
 ------ Benefits and spoiler ----
 Benefits: You’ll eat anything and anyone.
-Avantage: Tu mangerais n'importe quoi et n'importe qui.
+Avantage: Infligez des dégâts de saignement persistants avec votre morsure vous accorde des points de vie temporaires.
 
 ------ Description (en) ------
 <p>You'll eat anything and anyone. Whenever you inflict persistent bleed damage with your jaws unarmed attack, you gain temporary Hit Points equal to half your level for 1 minute.</p>
 ------ Description (fr) ------
-<p>Vous mangerez n'importe quoi et n'importe qui.</p>
+<p>Vous mangeriez n'importe quoi et n'importe qui.</p>
 <p>Lorsque vous infligez des dégâts de saignement persistants avec une attaque à mains nues portée à l'aide de vos mâchoires, vous obtenez des Points de vie temporaires égaux à la moitié de votre niveau pendant 1 minute.</p>
