--- a/data/feats/ancestry-09-FUOUyhHufNH4ri7H.htm
+++ b/data/feats/ancestry-09-FUOUyhHufNH4ri7H.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You can strain to call forth feathered or cloudy wings from your back.
-Avantage: Vous pouvez faire un effort pour faire apparaître des ailes de plumes ou de nuages dans votre dos.
+Avantage: Vous obtenez une Vitesse de vol pendant 10 minutes.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
@@ -15,4 +15,4 @@ Avantage: Vous pouvez faire un effort pour faire apparaître des ailes de plumes
 ------ Description (fr) ------
 <p><strong>Fréquence</strong> une fois par jour</p>
 <hr />
-<p>Vous pouvez faire l'effort de conjurer des ailes emplumées ou nuageuses de votre dos. Une fois qu'elles se sont manifestées, ces ailes persistent pendant 10 minutes. Vous obtenez un vitesse de Vol égale à votre Vitesse au sol tant que vos ailes sont présentes.</p>
+<p>Vous pouvez faire l'effort de conjurer des ailes emplumées ou nuageuses dans votre dos. Une fois qu'elles se sont manifestées, ces ailes persistent pendant 10 minutes. Vous obtenez un vitesse de Vol égale à votre Vitesse au sol tant que vos ailes sont présentes.</p>
