--- a/data/feats/ancestry-09-G6rCbMrHacYWNu1K.htm
+++ b/data/feats/ancestry-09-G6rCbMrHacYWNu1K.htm
@@ -6,9 +6,10 @@ PrereqFR: attaque à mains nues de griffe
 
 ------ Benefits and spoiler ----
 Benefits: Your claws carry an irritant that is harmless to you but can be damaging to others.
-Avantage: Vos griffes sont porteuses d'un irritant qui est inoffensif pour vous mais qui peut être dommageable pour les autres.
+Avantage: Vos griffes infligent 1d4 dégâts persistants de poison sur un coup critique.
 
 ------ Description (en) ------
 <p>Your claws carry an irritant that is harmless to you but can be damaging to others. Your claw @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Strikes} deal an additional [[/r 1d4 #persistent poison]] persistent poison damage on a critical hit.</p>
 ------ Description (fr) ------
-<p>Vos griffes charrient une substance irritante qui est inoffensive pour vous mais qui peut causer des dégâts aux autres. Vos @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Frappes} de griffe infligent [[/r 1d4 #dégâts persistants de poison]] dégâts persistants de poison sur un coup critique.</p>
+<p>Vos griffes charrient une substance irritante qui est inoffensive pour vous mais qui est dommageable pour les autres.</p>
+<p>Vos @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Frappes} de griffe infligent [[/r 1d4 #dégâts persistants de poison]] dégâts persistants de poison sur un coup critique.</p>
