--- a/data/feats/ancestry-09-g9AOSz4QDAlUee9M.htm
+++ b/data/feats/ancestry-09-g9AOSz4QDAlUee9M.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You always have time for a joke or prank.
-Avantage: Vous avez toujours le temps de faire une blague ou une farce.
+Avantage: Vous Créez une diversion, Masquez un objet ou vous vous Cachez par une action gratuite.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per hour</p>
@@ -15,4 +15,5 @@ Avantage: Vous avez toujours le temps de faire une blague ou une farce.
 ------ Description (fr) ------
 <p><strong>Fréquence</strong> une fois par heure</p>
 <hr />
-<p>Vous avez toujours le temps pour une farce ou un canular. Vous Créez une diversion, Masquez un object ou de Cacher. Toutes les créatures qui ont été témoin de votre astuce de renard en sont averties, devenant temporairement immunisées à votre Astuce de renard pendant 24 heures.</p>
+<p>Vous avez toujours le temps pour une farce ou un canular.</p>
+<p>Vous Créez une diversion, Masquez un objet ou vous vous Cachez. Toutes les créatures qui ont été témoin de votre astuce de renard en sont averties, devenant temporairement immunisées à votre Astuce de renard pendant 24 heures.</p>
