--- a/data/feats/ancestry-09-FrzskqwNWexKY5BA.htm
+++ b/data/feats/ancestry-09-FrzskqwNWexKY5BA.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You can take advantage of the terrain to bypass foesâ€™ defenses.
-Avantage: Vous pouvez profiter du terrain pour contourner les défenses de vos ennemis.
+Avantage: Hormis les hommes-lézards, vous Prenez au dépourvu les créatures situées sur un terrain difficile.
 
 ------ Description (en) ------
 <p>You can take advantage of the terrain to bypass foes' defenses. Non-lizardfolk creatures in difficult terrain are @Compendium[pf2e.conditionitems.AJh5ex99aV6VTggg]{Flat-Footed}to you. If you have a swim Speed, non-lizardfolk creatures that are in water and lack a swim Speed are also flat-footed to you.</p>
