--- a/data/feats/ancestry-09-esKk5XrnlqRayDPG.htm
+++ b/data/feats/ancestry-09-esKk5XrnlqRayDPG.htm
@@ -6,9 +6,10 @@ PrereqFR: Type angélique
 
 ------ Benefits and spoiler ----
 Benefits: You can tap into the magic of angels that runs through your blood.
-Avantage: Vous pouvez puiser dans la magie des anges qui coule dans votre sang.
+Avantage: Vous pouvez Lancer Forme humanoïde et Délivrance de la peur une fois par jour chacun.
 
 ------ Description (en) ------
 <p>You can tap into the magic of angels that runs through your blood. You can cast @Compendium[pf2e.spells-srd.2qGqa33E4GPUCbMV]{Humanoid Form} and @Compendium[pf2e.spells-srd.EfFMLVbmkBWmzoLF]{Remove Fear} each once per day as 2nd-level divine innate spells.</p>
 ------ Description (fr) ------
-<p>Vous pouvez puiser dans la magie des anges qui coule dans votre sang. Vous pouvez Lancer @Compendium[pf2e.spells-srd.2qGqa33E4GPUCbMV]{Forme humanoïde} et @Compendium[pf2e.spells-srd.EfFMLVbmkBWmzoLF]{Délivrance de la peur} chacune une fois par jour comme des sorts innés divins de niveau 2.</p>
+<p>Vous pouvez puiser dans la magie des anges qui coule dans votre sang.</p>
+<p>Vous pouvez Lancer @Compendium[pf2e.spells-srd.2qGqa33E4GPUCbMV]{Forme humanoïde} et @Compendium[pf2e.spells-srd.EfFMLVbmkBWmzoLF]{Délivrance de la peur} une fois par jour chacun comme des sorts innés divins de niveau 2.</p>
