--- a/data/feats/ancestry-09-fcSzCdQ9y800BdOv.htm
+++ b/data/feats/ancestry-09-fcSzCdQ9y800BdOv.htm
@@ -7,9 +7,10 @@ PrereqFR: Néentravé
 
 ------ Benefits and spoiler ----
 Benefits: You know there's so much more to sensation than whips and chains—but whips and chains also have their place.
-Avantage: Tu sais que les sensations ne se limitent pas aux fouets et aux chaînes, mais les fouets et les chaînes ont aussi leur place.
+Avantage: Vous pouvez lancer Manœuvre télékinésique et Toile une fois par jour chacun.
 
 ------ Description (en) ------
 <p>You know there’s so much more to sensation than whips and chains—but whips and chains also have their place. You can cast @Compendium[pf2e.spells-srd.mrDi3v933gsmnw25]{Telekinetic Maneuver} and @Compendium[pf2e.spells-srd.9s5tqqXNzcoKamWx]{Web} once per day each as 2nd-level divine innate spells; in both cases, the spells manifest shadowy chains rather than their usual visual signifiers.</p>
 ------ Description (fr) ------
-<p>Vous savez qu'il y a tellement plus à expérimenter que les fouets et les chaines — mais les fouets et les chaines ont aussi leur place. Vous pouvez lancer @Compendium[pf2e.spells-srd.mrDi3v933gsmnw25]{Manœuvre télékinésique} et @Compendium[pf2e.spells-srd.9s5tqqXNzcoKamWx]{Toile} une fois par jour chacun comme des sorts divins innés de niveau 2 ; dans les deux cas, le sort manifeste des chaînes d'ombre au lieu de leurs manifestations visuelles habituelles.</p>
+<p>Vous savez qu'il y a tellement plus à expérimenter que les fouets et les chaines — mais les fouets et les chaines ont aussi leur place.</p>
+<p>Vous pouvez lancer @Compendium[pf2e.spells-srd.mrDi3v933gsmnw25]{Manœuvre télékinésique} et @Compendium[pf2e.spells-srd.9s5tqqXNzcoKamWx]{Toile} une fois par jour chacun comme des sorts divins innés de niveau 2 ; dans les deux cas, le sort manifeste des chaînes d'ombre au lieu de leurs manifestations visuelles habituelles.</p>
