--- a/data/feats/ancestry-09-ftntYtiKGoPBpvcv.htm
+++ b/data/feats/ancestry-09-ftntYtiKGoPBpvcv.htm
@@ -6,9 +6,10 @@ PrereqFR: Marquéfaille
 
 ------ Benefits and spoiler ----
 Benefits: You've deeply studied the secrets of your blood and can force reality to act against its own wishes.
-Avantage: Tu as profondément étudié les secrets de ton sang et tu peux forcer la réalité à agir contre sa propre volonté.
+Avantage: Vous pouvez lancer Flou et Silence une fois par jour chacun.
 
 ------ Description (en) ------
 <p>You’ve deeply studied the secrets of your blood and can force reality to act against its own wishes. You can cast @Compendium[pf2e.spells-srd.3JG1t3T4mWn6vTke]{Blur} and @Compendium[pf2e.spells-srd.gIdDLrbswTV3OBJy]{Silence} once per day each as 2nd-level divine innate spells.</p>
 ------ Description (fr) ------
-<p>Vous avez profondément étudié les secrets de votre sang et pouvez forcer la réalité à agir contre ses propres souhaits. Vous pouvez lancer @Compendium[pf2e.spells-srd.3JG1t3T4mWn6vTke]{Flou} et @Compendium[pf2e.spells-srd.gIdDLrbswTV3OBJy]{Silence} une fois par jour chacun comme des sorts divins de niveau 2.</p>
+<p>Vous avez profondément étudié les secrets de votre sang et pouvez forcer la réalité à agir contre ses propres souhaits.</p>
+<p>Vous pouvez lancer @Compendium[pf2e.spells-srd.3JG1t3T4mWn6vTke]{Flou} et @Compendium[pf2e.spells-srd.gIdDLrbswTV3OBJy]{Silence} une fois par jour chacun comme des sorts divins de niveau 2.</p>
