--- a/data/feats/ancestry-09-fu1cTh93zgGweduf.htm
+++ b/data/feats/ancestry-09-fu1cTh93zgGweduf.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Ever alert, you scout for danger even when you are trying to stay hidden.
-Avantage: Toujours sur le qui-vive, vous guettez le danger même lorsque vous essayez de rester caché.
+Avantage: Vous pouvez accomplir l'activité d'exploration Reconnaître tout en Échappant aux regards.
 
 ------ Description (en) ------
 <p>Ever alert, you @Compendium[pf2e.actionspf2e.kV3XM0YJeS2KCSOb]{Scout} for danger even when you are trying to stay hidden. You can perform the Scout exploration activity at the same time as the @Compendium[pf2e.actionspf2e.IE2nThCmoyhQA0Jn]{Avoid Notice} exploration activity.</p>
