--- a/data/feats/ancestry-09-HPW7Qi02lkVprW6V.htm
+++ b/data/feats/ancestry-09-HPW7Qi02lkVprW6V.htm
@@ -6,9 +6,10 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You vanish with silent treads.
-Avantage: Vous disparaissez à pas feutrés.
+Avantage: Vous Faites un pas, puis vous vous Cachez ou Êtes furtif.
 
 ------ Description (en) ------
 <p>You vanish with silent treads. You Step, then Hide or Sneak. You still need to meet the requirements to Hide or Sneak, as normal.</p>
 ------ Description (fr) ------
-<p>Vous disparaissez avec des foulées silencieuses. Vous Faites un pas, puis vous vous Cachez ou Êtes furtif. Vous avez toujours besoin de remplir les conditions pour vous Cacher ou Être furtif, comme d'ordinaire.</p>
+<p>Vous disparaissez à pas feutrés.</p>
+<p>Vous Faites un pas, puis vous vous Cachez ou Êtes furtif. Vous avez toujours besoin de remplir les conditions pour vous Cacher ou Être furtif, comme à l'ordinaire.</p>
