--- a/data/feats/ancestry-09-jNemcS5GqH8mnjV6.htm
+++ b/data/feats/ancestry-09-jNemcS5GqH8mnjV6.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You can strain to call forth bat-like or otherwise fiendish wings from your back, similar in appearance to those of your fiendish ancestors.
-Avantage: Vous pouvez faire un effort pour faire sortir de votre dos des ailes de chauve-souris ou autres ailes diaboliques, semblables à celles de vos ancêtres diaboliques.
+Avantage: Vous obtenez une Vitesse de vol pendant 10 minutes.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
@@ -17,4 +17,4 @@ Avantage: Vous pouvez faire un effort pour faire sortir de votre dos des ailes d
 <p><strong>Fréquence</strong> une fois par jour</p>
 <hr />
 <p>Vous pouvez faire un effort pour invoquer des ailes de chauve-souris ou d'allure fiélone qui apparaissent dans votre dos, similaires en apparence à celles de vos ancêtres fiélons.</p>
-<p>Une fois manifestées, ces ailes demeurent pendant 10 minutes. Vous obtenez une vitesse de Vol égale à votre Vitesse au sol lorsque vous vos ailes se sont manifestées.</p>
+<p>Une fois manifestées, ces ailes demeurent pendant 10 minutes. Vous obtenez une vitesse de Vol égale à votre Vitesse au sol lorsque vos ailes sont présentes.</p>
