--- a/data/feats/ancestry-09-IQ9C7glCXVgYecz1.htm
+++ b/data/feats/ancestry-09-IQ9C7glCXVgYecz1.htm
@@ -1,16 +1,16 @@
 Name: Light From Darkness
-Nom: De l'obscurité à la lumière
+Nom: De la lumière à l'obscurité
 PrereqEN: 
 PrereqFR: 
 État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You've battled the fiendish power within your nature and come out on top; whatever you decide to do with your life, for good or evil, will be your choice and your choice alone.
-Avantage: Vous avez combattu le pouvoir diabolique qui sommeille dans votre nature et vous en êtes sorti vainqueur ; ce que vous déciderez de faire de votre vie, en bien ou en mal, sera votre choix et uniquement votre choix.
+Avantage: Vous obtenez un bonus de circonstances de +1 à tous les jets de sauvegarde contre les effets divins.
 
 ------ Description (en) ------
 <p>You've battled the fiendish power within your nature and come out on top; whatever you decide to do with your life, for good or evil, will be your choice and your choice alone. This struggle has granted you powerful resistance against the divine.</p>
 <p>You gain a +1 circumstance bonus to all saving throws against divine effects.</p>
 ------ Description (fr) ------
-<p>Vous avez combattu le pouvoir fiélon qui est votre nature et êtes parvenu à en sortir ; Ce que vous choisirez de faire avec votre vie, pour le meilleur ou le pire, sera votre choix et seulement le vôtre. Ce combat vous a accordé une résistance puissante contre le divin.</p>
+<p>Vous avez combattu le pouvoir maléfique qui sommeille en vous et vous en sortez vainqueur ; Ce que vous choisirez de faire avec votre vie, pour le meilleur ou le pire, sera votre choix et uniquement le vôtre. Ce combat vous a accordé une résistance puissante contre le divin.</p>
 <p>Vous obtenez un bonus de circonstances de +1 à tous les jets de sauvegarde contre les effets divins.</p>
