--- a/data/feats/ancestry-09-JeMGDAD5s9AXCZ2G.htm
+++ b/data/feats/ancestry-09-JeMGDAD5s9AXCZ2G.htm
@@ -6,10 +6,10 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your shapeshifting grants you a magical connection to the animal world.
-Avantage: Votre métamorphose vous confère une connexion magique avec le monde animal.
+Avantage: Vous pouvez lancer Mesager animal, Apaisement des émotions (animaux seulement) et Communication avec les Animaux une fois par jour chacun.
 
 ------ Description (en) ------
 <p>Your shapeshifting grants you a magical connection to the animal world. You can cast @Compendium[pf2e.spells-srd.yhz9fF69uwRhnHix]{Animal Messenger}, @Compendium[pf2e.spells-srd.b515AZlB0sridKSq]{Calm Emotions} (animals only), and @Compendium[pf2e.spells-srd.BBvV7qoXGdw09q1C]{Speak with Animals} as 2nd-level primal innate spells once per day each. These spells use your class DC or spell DC, whichever is higher.</p>
 ------ Description (fr) ------
 <p>Votre changement de forme vous accorde un lien magique avec le monde animal.</p>
-<p>Vous pouvez lancer @Compendium[pf2e.spells-srd.yhz9fF69uwRhnHix]{Mesager animal}, @Compendium[pf2e.spells-srd.b515AZlB0sridKSq]{Apaisement des émotions} (animaux seulement) et @Compendium[pf2e.spells-srd.BBvV7qoXGdw09q1C]{Communication avec les Animaux} comme des sorts innés primordiaux de niveau 2, chacun une fois par jour. Ces sorts utilisent le plus élevé entre votre DD de classe ou votre DD de sort.</p>
+<p>Vous pouvez lancer @Compendium[pf2e.spells-srd.yhz9fF69uwRhnHix]{Mesager animal}, @Compendium[pf2e.spells-srd.b515AZlB0sridKSq]{Apaisement des émotions} (animaux seulement) et @Compendium[pf2e.spells-srd.BBvV7qoXGdw09q1C]{Communication avec les Animaux} comme des sorts innés primordiaux de niveau 2, une fois par jour chacun. Ces sorts utilisent le plus élevé entre votre DD de classe ou votre DD de sort.</p>
