--- a/data/feats/ancestry-09-hgfRHSS5BsoyQ9Fj.htm
+++ b/data/feats/ancestry-09-hgfRHSS5BsoyQ9Fj.htm
@@ -2,14 +2,14 @@ Name: Marid Magic
 Nom: Magie Maride
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You channel the magic of marids .
-Avantage: Tu canalises la magie des marides.
+Avantage: Vous pouvez lancer Poussée hydraulique et Brume de dissimulation une fois par jour chacun.
 
 ------ Description (en) ------
 <p>You channel the magic of marids. You can cast @Compendium[pf2e.spells-srd.jfVCuOpzC6mUrf6f]{Hydraulic Push} and @Compendium[pf2e.spells-srd.9XHmC2JgTUIQ1CCm]{Obscuring Mist} each once per day as 2nd-level arcane innate spells.</p>
 ------ Description (fr) ------
-<p>Vous canalisez la magie des Marides. Vous pouvez lancer @Compendium[pf2e.spells-srd.jfVCuOpzC6mUrf6f]{Poussée hydraulique} et @Compendium[pf2e.spells-srd.9XHmC2JgTUIQ1CCm]{Brume de dissimulation} chacun une fois par jour comme des sorts innés arcaniques de niveau 2.</p>
+<p>Vous canalisez la magie des Marides.</p>
+<p>Vous pouvez lancer @Compendium[pf2e.spells-srd.jfVCuOpzC6mUrf6f]{Poussée hydraulique} et @Compendium[pf2e.spells-srd.9XHmC2JgTUIQ1CCm]{Brume de dissimulation} une fois par jour chacun comme des sorts innés arcaniques de niveau 2.</p>
