--- a/data/pathfinder-bestiary-2/uiTUtcXixZ6TdKYE.htm
+++ b/data/pathfinder-bestiary-2/uiTUtcXixZ6TdKYE.htm
@@ -1,8 +1,8 @@
 Name: Vanth
-Nom: 
-État: auto-trad
+Nom: Vanth
+État: libre
 
 ------ Description (en) ------
 Protecting the Boneyard are the stern and resolute guardians of the dead known as vanths, psychopomps who resemble skeletons with raven-like wings and a mask resembling a vulture's skull. Vanths carry black scythes to fight against those who would disturb the natural progression of souls, and they consider any visitor to the Boneyard a potential troublemaker. When the psychopomp armies go to war, vanths serve as front-line soldiers. They rarely speak and even more rarely show any emotion other than a grim adherence to duty.<br /><br />
 ------ Description (fr) ------
-Les gardiens des morts, appelés vanths, protègent le Boneyard. Ces psychopompes ressemblent à des squelettes avec des ailes de corbeau et un masque ressemblant à un crâne de vautour. Les vanths portent des faux noires pour lutter contre ceux qui voudraient perturber la progression naturelle des âmes, et ils considèrent tout visiteur du Boneyard comme un trouble-fête potentiel. Lorsque les armées de psychopompes partent en guerre, les vanths servent de soldats de première ligne. Ils parlent rarement et montrent encore plus rarement d'autres émotions qu'une adhésion sinistre au devoir.<br /><br />
+Les gardiens des morts, appelés Vanths, protègent le Cimetière. Ces psychopompes ressemblent à des squelettes avec des ailes de corbeau et un masque ressemblant à un crâne de vautour. Les Vanths portent des faux noires pour lutter contre ceux qui voudraient perturber la progression naturelle des âmes, et ils considèrent tout visiteur du Cimetière comme un trouble-fête potentiel. Lorsque les armées de psychopompes partent en guerre, les Vanths servent de soldats de première ligne. Ils parlent rarement et ne montrent aucune émotion autre que celle de leur adhésion sinistre à leur devoir.<br /><br />
