--- a/data/pathfinder-bestiary-2/UTnrcGoCIXR95zKi.htm
+++ b/data/pathfinder-bestiary-2/UTnrcGoCIXR95zKi.htm
@@ -1,8 +1,8 @@
 Name: Giant Whiptail Centipede
-Nom: 
-État: auto-trad
+Nom: Mille-pattes à queue fouettante
+État: libre
 
 ------ Description (en) ------
 Whiptail centipedes are sleek and swift tunnel predators.<br /><br />
 ------ Description (fr) ------
-Les centipèdes à queue en éventail sont des prédateurs de tunnels élégants et rapides.<br /><br />
+Les Mille-pattes à queue fouettantes,  sont des prédateurs de tunnels élancés et rapides.<br /><br />
