--- a/data/pathfinder-bestiary-2/VrkmTQKB3Ln7wVTr.htm
+++ b/data/pathfinder-bestiary-2/VrkmTQKB3Ln7wVTr.htm
@@ -1,8 +1,8 @@
 Name: Behemoth Hippopotamus
-Nom: 
+Nom: Hippotame Bénémoth
 État: auto-trad
 
 ------ Description (en) ------
 Behemoth hippopotamuses stand taller than elephants. They spend less time out of water than their smaller kin. Behemoth hippos are omnivorous, and many enjoy the taste of meat.<br /><br />
 ------ Description (fr) ------
-Les hippopotames béhémoths sont plus grands que les éléphants. Ils passent moins de temps hors de l'eau que leurs congénères plus petits. Les hippopotames géants sont omnivores et beaucoup apprécient le goût de la viande ;
+Les hippopotames Béhémoths sont plus grands que les éléphants. Ils passent moins de temps hors de l'eau que leurs congénères plus petits. Ces hippopotames géants sont omnivores et beaucoup apprécient le goût de la viande.
