--- a/data/pathfinder-bestiary-2/vXXEdDy8ciGJxt3i.htm
+++ b/data/pathfinder-bestiary-2/vXXEdDy8ciGJxt3i.htm
@@ -1,6 +1,6 @@
 Name: Mist Stalker
 Nom: Traqueur des brumes
-État: auto-trad
+État: libre
 
 ------ Description (en) ------
 The tentacled mist stalker shrouds itself in a cloak of mist through which its single, never-blinking eye can see with clarity, allowing it an advantage when stalking its prey.<br /><br />
