--- a/data/feats/archetype-04-QrShJGrvmWPBj4oN.htm
+++ b/data/feats/archetype-04-QrShJGrvmWPBj4oN.htm
@@ -1,11 +1,14 @@
 Name: Arcane School Spell
 Nom: Sort d'école arcanique
 PrereqEN: Wizard Dedication
-Avantage:
 PrereqFR: Dévouement du magicien
 État: officielle
+
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: Vous obtenez le sort d'école initial d'une école arcanique.
 
 ------ Description (en) ------
 <p>Select one arcane school of magic. You gain the school's initial school spell. If you don't already have one, you gain a focus pool of 1 Focus Point, which you can Refocus by studying. (For more on arcane schools, see page 204.).</p>
 ------ Description (fr) ------
-<p>Vous gagnez les avantages d’incantation basique. Chaque fois que vous obtenez, avec l’archétype magicien, un emplacement de sort d’un nouveau niveau, ajoutez à votre grimoire deux sorts ordinaires de ce niveau.</p>
+<p>Sélectionnez une école de magie arcanique. Vous gagnez le sort d’école initial de cette école. Si vous n’en avez pas déjà une, vous gagnez également une réserve de focalisation d’une valeur de 1 point de focalisation, que vous pouvez Refocaliser par l’étude (pour plus d’informations sur les écoles arcaniques.</p>
