--- a/data/feats/ancestry-09-K9ixUl7PrNbBHGdA.htm
+++ b/data/feats/ancestry-09-K9ixUl7PrNbBHGdA.htm
@@ -1,9 +1,12 @@
 Name: Sodbuster
 Nom: Briseur de motte
 PrereqEN: Dig Quickly
-Avantage:
 PrereqFR: Creuser rapidement
 État: libre
+
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: Vous obtenez une Vitesse de creusement de 3 m.
 
 ------ Description (en) ------
 <p>Years toiling in soil have made you an expert digger. You gain a burrow Speed of 10 feet through loose soil or dirt.</p>
