--- a/data/feats/ancestry-09-KRgzuwwjT30KKvV4.htm
+++ b/data/feats/ancestry-09-KRgzuwwjT30KKvV4.htm
@@ -6,11 +6,11 @@ PrereqFR: Familiarité avec les armes tengu
 
 ------ Benefits and spoiler ----
 Benefits: You were always taught that you needed to be able to use whatever weapon came your way.
-Avantage: On t'a toujours appris que tu devais être capable d'utiliser n'importe quelle arme sur ton chemin.
+Avantage: Vous pouvez échanger qutodiennement l'épée choisie avec Familiarité avec les armes tengu
 
 ------ Description (en) ------
 <p>You were always taught that you needed to be able to use whatever weapon came your way. You can change any of the swords designated in your Tengu Weapon Familiarity to different swords that meet the same specifications.</p>
 <p>You have to practice with a sword during your daily preparations to designate it, and the designation only lasts until your next daily preparations. This changes only your proficiency; it doesn't change your access.</p>
 ------ Description (fr) ------
-<p>On vous a toujours enseigné que vous avez besoin d'être capable d'utiliser toute arme qui a croisé votre route. Vous pouvez changer n'importe quelle épée qui a été choisie avec votre Familiarité avec les armes tengu en unhe épée différente qui remplit les mêmes spécificités.</p>
-<p>Vous devez pratiquer avec une épée pendant vos préparatifs quotidiens pour la désigner et la désignation ne dure que jusqu'à vos prochains préparatifs quotidiens. Cela ne change que votre maîtrise ; cela ne modifie pas votre accès.</p>
+<p>On vous a toujours enseigné que vous avez besoin d'être capable d'utiliser toute arme qui a croisé votre route. Vous pouvez échanger n'importe quelle épée choisie avec Familiarité avec les armes tengu pour une épée différente qui remplit les mêmes caractéristiques.</p>
+<p>Vous devez pratiquer avec cette épée pendant vos préparatifs quotidiens pour pouvoir la désigner et cette désignation ne dure que jusqu'à vos prochains préparatifs quotidiens. Cela ne change que votre maîtrise ; cela ne modifie pas votre accès.</p>
