--- a/data/feats/ancestry-09-NEl8G3SlwxOR9Zx1.htm
+++ b/data/feats/ancestry-09-NEl8G3SlwxOR9Zx1.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your body anticipates the blow.
-Avantage: Votre corps anticipe le coup.
+Avantage: Vous obtenez une résistance égale à votre niveau contre un unique coup infligeant des dégâts contondants, perforants ou tranchants.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
@@ -18,5 +18,6 @@ Avantage: Votre corps anticipe le coup.
 <p><strong>Fréquence</strong> une fois par jour</p>
 <p><strong>Déclencheur</strong> Vous devriez subir des dégâts contondants, perforants ou tranchants.</p>
 <hr />
-<p>Votre corps anticipe le coup. La zone d'impact se réorganise en un treillage tissé renforcé qui amortit l'attaque. Vous obtenez une résistance égale à votre niveau pour le type de dégât déclencheur, qui s'applique contre les dégâts déclencheurs.</p>
+<p>Votre corps anticipe le coup. La zone d'impact se réorganise en un treillage tissé renforcé qui amortit l'attaque.</p>
+<p>Vous obtenez une résistance égale à votre niveau pour le type de dégât déclencheur, qui s'applique contre les dégâts déclencheurs.</p>
 <p>Si vous avez le don Poussière cristalline, vous pouvez utiliser Reconfiguration préemptive sans dépenser une utilisation de la réaction pour les besoins de calculer la limite d'utilisation du don. Au lieu de cela, l'utilisation est décomptée de votre nombre d'utilisations de Poussière cristalline par jour, comme si vous aviez utilisé ce don à la place.</p>
