--- a/data/feats/ancestry-09-KgiYiDz1lWoBMRlF.htm
+++ b/data/feats/ancestry-09-KgiYiDz1lWoBMRlF.htm
@@ -6,7 +6,7 @@ PrereqFR: au moins un sort inné obtenu d'un don ancestral elfique
 
 ------ Benefits and spoiler ----
 Benefits: The arcane magic you possess grows in power and complexity.
-Avantage: La magie des arcanes que vous possédez gagne en puissance et en complexité.
+Avantage: Vous obtenez un sort de niveau 2 de la même tradition que vos autres sorts innés que vous pouvez changer.
 
 ------ Description (en) ------
 <p>The arcane magic you possess grows in power and complexity. Choose one common 2nd-level spell from the same tradition as an innate spell you previously gained from another elf ancestry feat (from the arcane list if you have Otherworldly Magic, for example). You can cast that spell as an innate spell once per day, using the same tradition as the list you chose the spell from.</p>
