--- a/data/feats/ancestry-09-KsFrWhIPVLOqxV07.htm
+++ b/data/feats/ancestry-09-KsFrWhIPVLOqxV07.htm
@@ -6,9 +6,10 @@ PrereqFR: attaque à mains nues de Griffe
 
 ------ Benefits and spoiler ----
 Benefits: Your claws carry your mother's hag magic.
-Avantage: Tes griffes portent la magie de ta mère, la sorcière.
+Avantage: En cas de coup critique, vos griffes infligent 1d4 dégâts mentaux persistants.
 
 ------ Description (en) ------
 <p>Your claws carry your mother's hag magic. When you critically hit with a claw Strike, the target takes an additional [[/r 1d4 #persistent mental]] persistent mental damage.</p>
 ------ Description (fr) ------
-<p>Vos griffes portent la magie de votre mère guenaude. Lorsque vous obtenez un coup critique avec votre Frappe de griffe, la cible subit [[/r 1d4 #dégâts persistants mentaux]] dégâts persistants mentaux supplémentaires.</p>
+<p>Vos griffes portent la magie de votre mère guenaude.</p>
+<p>Lorsque vous obtenez un coup critique avec votre Frappe de griffe, la cible subit [[/r 1d4 #dégâts mentaux persistants]] dégâts mentaux persistants supplémentaires.</p>
