--- a/data/feats/ancestry-09-LK6niBb38mEraYRS.htm
+++ b/data/feats/ancestry-09-LK6niBb38mEraYRS.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your physiology is slight, and you can pack into small spaces with others of similar stature.
-Avantage: Votre physiologie est légère, et vous pouvez vous entasser dans de petits espaces avec d'autres personnes de même stature.
+Avantage: vous pouvez terminer votre déplacement dans la même case qu'un allié de taille Petite.
 
 ------ Description (en) ------
 <p>Your physiology is slight, and you can pack into small spaces with others of similar stature.</p>
