--- a/data/feats/ancestry-09-LRBzEzpS19z3Eghd.htm
+++ b/data/feats/ancestry-09-LRBzEzpS19z3Eghd.htm
@@ -6,7 +6,7 @@ PrereqFR: Partager les pensées
 
 ------ Benefits and spoiler ----
 Benefits: You have an even stranger knack for knowing what other people are thinking.
-Avantage: Tu as un don encore plus étrange pour savoir ce que les autres pensent.
+Avantage: Vous pouvez lancer Lecture des pensées une fois par jour.
 
 ------ Description (en) ------
 <p>You have an even stranger knack for knowing what other people are thinking. You can cast @Compendium[pf2e.spells-srd.KHnhPHL4x1AQHfbC]{Mind Reading} as an innate occult spell once per day.</p>
