--- a/data/feats/ancestry-09-LhpE0NsfNwYP6MOz.htm
+++ b/data/feats/ancestry-09-LhpE0NsfNwYP6MOz.htm
@@ -6,14 +6,14 @@ PrereqFR: héritage Gobelin des neiges
 
 ------ Benefits and spoiler ----
 Benefits: You are no rime hag or Jadwiga, but the magic of the north has still left a mark on you.
-Avantage: Vous n'êtes pas une sorcière rimeuse ou une Jadwiga, mais la magie du Nord vous a quand même marqué.
+Avantage: Vous pouvez geler vos adversaires et les rendre maladroits en soufflant le froid.
 
 ------ Description (en) ------
 <p>You are no rime hag or Jadwiga, but the magic of the north has still left a mark on you. Frigid ice runs through your veins, and you can expel frost from your body to freeze your foes. Attempt an Athletics check against the Fortitude DC of an adjacent foe. If you have master proficiency in Athletics, you can affect up to two adjacent foes, rolling one Athletics check against each foe.<br /><br /><strong>Critical Success</strong> The target becomes clumsy 2 for 1 round.<br /><strong>Success</strong> The target becomes clumsy 1 for 1 round.<br /><strong>Critical Failure</strong> The target is temporarily immune for 1 minute.</p>
 ------ Description (fr) ------
 <p>Vous n'êtes ni une guenaude de l'hiver, ni un Jadwiga mais la magie du Nord a néanmoins laissé sa marque sur vous. La glace liquide circule dans vos veines et vous pouvez l'expulser de votre corps pour geler vos ennemis. Faites un test d'Athlétisme contre le DD de Vigueur d'un adversaire adjacent. Si vous êtes maître en Athlétisme, vous pouvez affecter jusqu'à deux ennemis adjacents, en faisant un test d'Athlétisme contre chacun.</p>
 <ul>
-<li><strong>Réussite critique</strong> La cible devient @Compendium[pf2e.conditionitems.i3OJZU2nk64Df3xm]{Maladroite} 2 pendant 1 round.</li>
-<li><strong>Réussite</strong> La cible devient Maladroite 1 pendant 1 round.</li>
+<li><strong>Succès critique</strong> La cible devient @Compendium[pf2e.conditionitems.i3OJZU2nk64Df3xm]{Maladroite} 2 pendant 1 round.</li>
+<li><strong>Succès </strong> La cible devient Maladroite 1 pendant 1 round.</li>
 <li><strong>Échec critique</strong> La cible est temporairement immunisée pendant 1 minute.</li>
 </ul>
