--- a/data/feats/ancestry-09-k0sXAn4PPq5nW9al.htm
+++ b/data/feats/ancestry-09-k0sXAn4PPq5nW9al.htm
@@ -2,14 +2,14 @@ Name: Guiding Luck
 Nom: Chance directrice
 PrereqEN: Halfling Luck
 PrereqFR: Chance halfeline
-État: officielle
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: Your luck guides you to look the right way and aim your blows unerringly.
-Avantage: La chance vous guide pour regarder dans la bonne direction et diriger vos coups de manière infaillible.
+Avantage: Vous pouvez utiliser Chance halfeline deux fois par jour dont une en cas d'échec à un test de perception ou un jet d'attaque
 
 ------ Description (en) ------
 <p>Your luck guides you to look the right way and aim your blows unerringly. You can use Halfling Luck twice per day: once in response to its normal trigger, and once when you fail a Perception check or attack roll instead of the normal trigger.</p>
 ------ Description (fr) ------
-<p>Votre chance vous guide et vous permet de porter vos coups avec infaillibilité.</p>
+<p>Votre chance vous guide et vous permet de regarder dans la bonne direction et de porter vos coups de manière infaillible.</p>
 <p>Vous pouvez utiliser Chance halfeline deux fois par jour : une fois en réaction avec son déclencheur normal et une fois après avoir obtenu un échec sur un test de Perception ou un jet d’attaque au lieu du déclencheur normal.</p>
