--- a/data/feats/ancestry-09-kjRMXN95lQmIi2hP.htm
+++ b/data/feats/ancestry-09-kjRMXN95lQmIi2hP.htm
@@ -6,9 +6,9 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your connection to earth and stone allows you to feel the slightest displacement that disturbs them, down to the shift of a pebble.
-Avantage: Votre lien avec la terre et la pierre vous permet de ressentir le moindre déplacement qui les perturbe, jusqu'au déplacement d'un caillou.
+Avantage: Vous obtenez Perception des vibrations (imprécis) avec une portée de 9 m.
 
 ------ Description (en) ------
 <p>Your connection to earth and stone allows you to feel the slightest displacement that disturbs them, down to the shift of a pebble. You gain tremorsense as an imprecise sense with a range of 30 feet.</p>
 ------ Description (fr) ------
-<p>Votre lien avec la terre et la pierre vous permet de sentir le plus léger des déplacements qui les affecte, jusqu'au frottement d'un galet. Vous obtenez perception des vibrations comme un sens imprécis avec une portée de 9 m.</p>
+<p>Votre lien avec la terre et la pierre vous permet de sentir le plus léger des déplacements qui les affecte, jusqu'au frottement d'un galet. Vous obtenez Perception des vibrations comme un sens imprécis avec une portée de 9 m.</p>
