--- a/data/feats/ancestry-09-l4ux6Mn2fklB2cXM.htm
+++ b/data/feats/ancestry-09-l4ux6Mn2fklB2cXM.htm
@@ -6,9 +6,9 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You can elude supernatural disaster.
-Avantage: Vous pouvez échapper à un désastre surnaturel.
+Avantage: Un test nu DD17 réussi vous évite l'état Condamné.
 
 ------ Description (en) ------
 <p>You can elude supernatural disaster. When you would gain the doomed condition, you can attempt a DC 17 flat check. On a success, you don’t gain the doomed condition.</p>
 ------ Description (fr) ------
-<p>Vous pouvez éluder le désastre surnaturel. Lorsque vous obtenez la condition condamné, vous pouvez faire un test nu DD 17. En cas de succès, vous n'obtenez pas la condition Condamné.</p>
+<p>Vous pouvez éluder le désastre surnaturel. Lorsque vous obtenez la condition Condamné, vous pouvez faire un test nu DD 17. En cas de succès, vous n'obtenez pas la condition Condamné.</p>
