--- a/data/feats/ancestry-09-lHcDb9oXUdFupRdi.htm
+++ b/data/feats/ancestry-09-lHcDb9oXUdFupRdi.htm
@@ -6,7 +6,7 @@ PrereqFR: Improvisateur astucieux
 
 ------ Benefits and spoiler ----
 Benefits: A stroke of brilliance gives you a major advantage with a skill despite your inexperience.
-Avantage: Un coup de génie vous donne un avantage majeur dans une compétence malgré votre inexpérience.
+Avantage: ous gagnez un bonus de circonstances de +4 à un test de compétence dans laquelle vous êtes inexpérimenté.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
