--- a/data/feats/ancestry-09-lbiFj4At5BxotaNY.htm
+++ b/data/feats/ancestry-09-lbiFj4At5BxotaNY.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your inborn arcane power manifests as your exemplar's most time-honored spells.
-Avantage: Votre pouvoir arcanique inné se manifeste par les sorts les plus anciens de votre modèle.
+Avantage: Vous obtenez un sort de niveau 1 et un sort de niveau 2 de votre modèle draconique.
 
 ------ Description (en) ------
 <p>Your inborn arcane power manifests as your exemplar's most time-honored spells.</p>
