--- a/data/feats/ancestry-09-mXNwdRSM9kZrT2Um.htm
+++ b/data/feats/ancestry-09-mXNwdRSM9kZrT2Um.htm
@@ -6,9 +6,10 @@ PrereqFR: Compagnon animal
 
 ------ Benefits and spoiler ----
 Benefits: You have trained with your animal companion to become a terrifying, unified juggernaut on the battlefield.
-Avantage: Vous vous êtes entraîné avec votre compagnon animal pour devenir un terrifiant juggernaut unifié sur le champ de bataille.
+Avantage: Votre compagnon animal est intimidant et vous aide à Démoraliser les adversaires.
 
 ------ Description (en) ------
 <p>You have trained with your animal companion to become a terrifying, unified juggernaut on the battlefield. Your animal companion becomes trained in Intimidation. If your animal companion uses Support while serving as your mount, it grants you the effects of the Aid reaction on your first Intimidation check to Demoralize on the same turn, even though it can’t take reactions.</p>
 ------ Description (fr) ------
-<p>Vous avez entraîné votre compagnon animal à devenir un juggernaut terrifiant sur le champ de bataille. Votre compagnon animal est qualifié en Intimidation. Si votre compagnon animal utilise Soutien lorsqu'il vous sert de monture, il vous accorde les effets de la réaction Aider sur votre premier test d'Intimidation pour Démoraliser lors du même tour, même s'il ne peut entreprendre une réaction.</p>
+<p>Vous avez entraîné votre compagnon animal à devenir un juggernaut terrifiant sur le champ de bataille.</p>
+<p>Votre compagnon animal est qualifié en Intimidation. Si votre compagnon animal utilise Soutien lorsqu'il vous sert de monture, il vous accorde les effets de la réaction Aider sur votre premier test d'Intimidation pour Démoraliser lors du même tour, même s'il ne peut entreprendre une réaction.</p>
