--- a/data/feats/ancestry-09-nHoRM1gLL7MtIiCS.htm
+++ b/data/feats/ancestry-09-nHoRM1gLL7MtIiCS.htm
@@ -2,14 +2,14 @@ Name: Djinni Magic
 Nom: Magie Djinn
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: The magic of djinn runs through your blood.
-Avantage: La magie des djinns coule dans ton sang.
+Avantage: Vous pouvez lancer Bourrasque de vent et Invisibilité une fois par jour chacun.
 
 ------ Description (en) ------
 <p>The magic of djinn runs through your blood. You can cast @Compendium[pf2e.spells-srd.g8QqHpv2CWDwmIm1]{Gust of Wind} and @Compendium[pf2e.spells-srd.XXqE1eY3w3z6xJCB]{Invisibility} once per day each as 2nd-level arcane innate spells.</p>
 ------ Description (fr) ------
-<p>La magie des Djinns court à travers votre sang. Vous pouvez lancer @Compendium[pf2e.spells-srd.g8QqHpv2CWDwmIm1]{Bourrasque de vent} et @Compendium[pf2e.spells-srd.XXqE1eY3w3z6xJCB]{Invisibilité} une fois par jour chacun comme des sorts innés arcaniques de niveau 2.</p>
+<p>La magie des Djinns court dans votre sang.</p>
+<p>Vous pouvez lancer @Compendium[pf2e.spells-srd.g8QqHpv2CWDwmIm1]{Bourrasque de vent} et @Compendium[pf2e.spells-srd.XXqE1eY3w3z6xJCB]{Invisibilité} une fois par jour chacun comme des sorts innés arcaniques de niveau 2.</p>
