--- a/data/feats/ancestry-09-ngNzsvIpnj1iLfSC.htm
+++ b/data/feats/ancestry-09-ngNzsvIpnj1iLfSC.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: The magic in your blood is unpredictable.
-Avantage: La magie dans ton sang est imprévisible.
+Avantage: Vous pouvez lancer deux sorts tirés au sort dans une liste par jour.
 
 ------ Description (en) ------
 <p>The magic in your blood is unpredictable. When you make your daily preparations, roll [[/r 1d12]] twice and consult the following list:</p>
@@ -27,18 +27,18 @@ Avantage: La magie dans ton sang est imprévisible.
 <p>You can cast each of those two spells once during the following day (or one spell twice if you rolled doubles) as 2nd-level divine innate spells.</p>
 ------ Description (fr) ------
 <p>La magie dans votre sang est imprévisible. Lorsque vous faites vos préparatifs quotidiens, lancez [[/r 1d12]] de fois et consultez la liste suivante :</p>
-<ol>
-<li>@Compendium[pf2e.spells-srd.f8hRqLJaxBVhF1u0]{Flêche acide};</li>
-<li>@Compendium[pf2e.spells-srd.3JG1t3T4mWn6vTke]{Fou};</li>
-<li>@Compendium[pf2e.spells-srd.tlSE7Ly8vi1Dgddv]{Fou rire};</li>
-<li>@Compendium[pf2e.spells-srd.2qGqa33E4GPUCbMV]{forme humanoïde};</li>
-<li>@Compendium[pf2e.spells-srd.2oH5IufzdESuYxat]{Objet illusoire};</li>
-<li>@Compendium[pf2e.spells-srd.j8vIoIEWElvpwkcI]{Image miroir};</li>
-<li>@Compendium[pf2e.spells-srd.Fr58LDSrbndgld9n]{Résistance à l'énergie};</li>
+<ul>
+<li>@Compendium[pf2e.spells-srd.wzLkNU3AAqOSKFPR]{Cacophonie};</li>
 <li>@Compendium[pf2e.spells-srd.jwK43yKsHTkJQvQ9]{Détection de l'invisibilité};</li>
 <li>@Compendium[pf2e.spells-srd.1xbFBQDRs0hT5xZ9]{Fracassement};</li>
-<li>@Compendium[pf2e.spells-srd.wzLkNU3AAqOSKFPR]{Cacophonie};</li>
+<li>@Compendium[pf2e.spells-srd.f8hRqLJaxBVhF1u0]{Flêche acide};</li>
+<li>@Compendium[pf2e.spells-srd.3JG1t3T4mWn6vTke]{Flou};</li>
+<li>@Compendium[pf2e.spells-srd.2qGqa33E4GPUCbMV]{Forme humanoïde};</li>
+<li>@Compendium[pf2e.spells-srd.tlSE7Ly8vi1Dgddv]{Fou rire};</li>
+<li>@Compendium[pf2e.spells-srd.j8vIoIEWElvpwkcI]{Image miroir};</li>
+<li>@Compendium[pf2e.spells-srd.mrDi3v933gsmnw25]{Manœuvre télékinésique};</li>
+<li>@Compendium[pf2e.spells-srd.2oH5IufzdESuYxat]{Objet illusoire};</li>
 <li>@Compendium[pf2e.spells-srd.5KobTMrZeZxuXMgl]{Pattes d'araignée};</li>
-<li>@Compendium[pf2e.spells-srd.mrDi3v933gsmnw25]{Manœuvre télékinésique}.</li>
-</ol>
+<li>@Compendium[pf2e.spells-srd.Fr58LDSrbndgld9n]{Résistance à l'énergie}.</li>
+</ul>
 <p>Vous pouvez lancer chacun de ces deux sorts une fois au cours de la journée suivante (ou une sort deux fois si vous l'avez tiré deux fois) comme des sorts divins innés de niveau 2.</p>
